// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink with Icon should match snapshot 1`] = `
<ButtonLink
  component="button"
  external={true}
  href="https://kiwi.com"
  size="normal"
  theme={
    Object {
      "backgroundAlertCritical": "#fae8e8",
      "backgroundAlertInfo": "#e0f6ff",
      "backgroundAlertSuccess": "#e7f3e8",
      "backgroundAlertWarning": "#fcf1cd",
      "backgroundBody": "#f5f7f9",
      "backgroundButtonBordered": "transparent",
      "backgroundButtonBorderedActive": "#fff",
      "backgroundButtonBorderedHover": "#f5f7f9",
      "backgroundButtonCritical": "#d21c1c",
      "backgroundButtonCriticalActive": "#b21717",
      "backgroundButtonCriticalHover": "#bd1919",
      "backgroundButtonFacebook": "#3b5998",
      "backgroundButtonFacebookActive": "#354f88",
      "backgroundButtonFacebookHover": "#385490",
      "backgroundButtonGoogle": "#f5f7f9",
      "backgroundButtonGoogleActive": "#d6dee6",
      "backgroundButtonGoogleHover": "#e5eaef",
      "backgroundButtonInfo": "#0176D2",
      "backgroundButtonInfoActive": "#0064b2",
      "backgroundButtonInfoHover": "#006abd",
      "backgroundButtonLinkPrimary": "transparent",
      "backgroundButtonLinkPrimaryActive": "#d6dee6",
      "backgroundButtonLinkPrimaryHover": "#e5eaef",
      "backgroundButtonLinkSecondary": "transparent",
      "backgroundButtonLinkSecondaryActive": "#d6dee6",
      "backgroundButtonLinkSecondaryHover": "#e5eaef",
      "backgroundButtonPrimary": "#00a991",
      "backgroundButtonPrimaryActive": "#008f7b",
      "backgroundButtonPrimaryHover": "#009882",
      "backgroundButtonSecondary": "#e8edf1",
      "backgroundButtonSecondaryActive": "#cad5df",
      "backgroundButtonSecondaryHover": "#d9e1e8",
      "backgroundButtonSuccess": "#46B655",
      "backgroundButtonSuccessActive": "#3fa34c",
      "backgroundButtonSuccessHover": "#42ac50",
      "backgroundButtonWarning": "#f9971e",
      "backgroundButtonWarningActive": "#e68206",
      "backgroundButtonWarningHover": "#f48a06",
      "backgroundCard": "#fff",
      "backgroundCarrierLogo": "transparent",
      "backgroundInput": "#fff",
      "backgroundInputDisabled": "#e8edf1",
      "backgroundModal": "#fff",
      "borderColorButtonCriticalBordered": "#d21c1c",
      "borderColorButtonCriticalBorderedActive": "#b21717",
      "borderColorButtonCriticalBorderedHover": "#bd1919",
      "borderColorButtonFacebookBordered": "#3b5998",
      "borderColorButtonFacebookBorderedActive": "#354f88",
      "borderColorButtonFacebookBorderedHover": "#385490",
      "borderColorButtonGoogleBordered": "#46515e",
      "borderColorButtonGoogleBorderedActive": "#38404b",
      "borderColorButtonGoogleBorderedHover": "#3f4854",
      "borderColorButtonInfoBordered": "#0176D2",
      "borderColorButtonInfoBorderedActive": "#0064b2",
      "borderColorButtonInfoBorderedHover": "#006abd",
      "borderColorButtonPrimaryBordered": "#00a991",
      "borderColorButtonPrimaryBorderedActive": "#008f7b",
      "borderColorButtonPrimaryBorderedHover": "#009882",
      "borderColorButtonSecondaryBordered": "#46515e",
      "borderColorButtonSecondaryBorderedActive": "#38404b",
      "borderColorButtonSecondaryBorderedHover": "#3f4854",
      "borderColorButtonSuccessBordered": "#46B655",
      "borderColorButtonSuccessBorderedActive": "#3fa34c",
      "borderColorButtonSuccessBorderedHover": "#42ac50",
      "borderColorButtonWarningBordered": "#f9971e",
      "borderColorButtonWarningBorderedActive": "#e68206",
      "borderColorButtonWarningBorderedHover": "#f48a06",
      "borderColorCard": "#e8edf1",
      "borderColorInput": "#bac7d5",
      "borderColorInputActive": "#94a8be",
      "borderColorInputError": "#d21c1c",
      "borderColorInputErrorFocus": "#d21c1c",
      "borderColorInputFocus": "#0176D2",
      "borderColorInputHover": "#a6b6c8",
      "borderColorModal": "#e8edf1",
      "borderColorTableCell": "#bac7d5",
      "borderRadiusCircle": "50%",
      "borderRadiusLarge": "6px",
      "borderRadiusNormal": "3px",
      "borderRadiusSmall": "2px",
      "borderStyleCard": "solid",
      "borderStyleInput": "solid",
      "borderWidthCard": "1px",
      "borderWidthInput": "1px",
      "boxShadowInputErrorFocus": "0px 0px 3px 1px rgba(210,28,28,0.3)",
      "boxShadowInputFocus": "0px 0px 3px 1px rgba(1,118,210,0.3)",
      "colorAlertIconCritical": "#d21c1c",
      "colorAlertIconInfo": "#0176D2",
      "colorAlertIconSuccess": "#46B655",
      "colorAlertIconWarning": "#f9971e",
      "colorHeading": "#171b1e",
      "colorHeadingInverted": "#fff",
      "colorIconAttention": "#171b1e",
      "colorIconCheckbox": "#00a991",
      "colorIconCheckboxDisabled": "#bac7d5",
      "colorIconInput": "#bac7d5",
      "colorIconPrimary": "#46515e",
      "colorIconRadioButton": "#00a991",
      "colorIconRadioButtonDisabled": "#bac7d5",
      "colorIconSecondary": "#7f91a8",
      "colorIconTerciary": "#bac7d5",
      "colorLabelForm": "#46515e",
      "colorLabelFormFilled": "#7f91a8",
      "colorPlaceholderInput": "#bac7d5",
      "colorTextAlertCritical": "#650808",
      "colorTextAlertInfo": "#07405c",
      "colorTextAlertSuccess": "#065d12",
      "colorTextAlertWarning": "#a93610",
      "colorTextAttention": "#171b1e",
      "colorTextButtonCritical": "#fff",
      "colorTextButtonCriticalActive": "#fff",
      "colorTextButtonCriticalBordered": "#d21c1c",
      "colorTextButtonCriticalBorderedActive": "#b21717",
      "colorTextButtonCriticalBorderedHover": "#bd1919",
      "colorTextButtonCriticalHover": "#fff",
      "colorTextButtonFacebook": "#fff",
      "colorTextButtonFacebookActive": "#fff",
      "colorTextButtonFacebookBordered": "#3b5998",
      "colorTextButtonFacebookBorderedActive": "#354f88",
      "colorTextButtonFacebookBorderedHover": "#385490",
      "colorTextButtonFacebookHover": "#fff",
      "colorTextButtonFilled": "#fff",
      "colorTextButtonFilledActive": "#fff",
      "colorTextButtonFilledHover": "#fff",
      "colorTextButtonGoogle": "#46515e",
      "colorTextButtonGoogleActive": "#38404b",
      "colorTextButtonGoogleBordered": "#46515e",
      "colorTextButtonGoogleBorderedActive": "#38404b",
      "colorTextButtonGoogleBorderedHover": "#3f4854",
      "colorTextButtonGoogleHover": "#3f4854",
      "colorTextButtonInfo": "#fff",
      "colorTextButtonInfoActive": "#fff",
      "colorTextButtonInfoBordered": "#0176D2",
      "colorTextButtonInfoBorderedActive": "#0064b2",
      "colorTextButtonInfoBorderedHover": "#006abd",
      "colorTextButtonInfoHover": "#fff",
      "colorTextButtonLinkPrimary": "#00a991",
      "colorTextButtonLinkPrimaryActive": "#008f7b",
      "colorTextButtonLinkPrimaryHover": "#009882",
      "colorTextButtonLinkSecondary": "#46515e",
      "colorTextButtonLinkSecondaryActive": "#38404b",
      "colorTextButtonLinkSecondaryHover": "#3f4854",
      "colorTextButtonPrimary": "#fff",
      "colorTextButtonPrimaryActive": "#fff",
      "colorTextButtonPrimaryBordered": "#00a991",
      "colorTextButtonPrimaryBorderedActive": "#008f7b",
      "colorTextButtonPrimaryBorderedHover": "#009882",
      "colorTextButtonPrimaryHover": "#fff",
      "colorTextButtonSecondary": "#46515e",
      "colorTextButtonSecondaryActive": "#38404b",
      "colorTextButtonSecondaryBordered": "#46515e",
      "colorTextButtonSecondaryBorderedActive": "#38404b",
      "colorTextButtonSecondaryBorderedHover": "#3f4854",
      "colorTextButtonSecondaryHover": "#3f4854",
      "colorTextButtonSuccess": "#fff",
      "colorTextButtonSuccessActive": "#fff",
      "colorTextButtonSuccessBordered": "#46B655",
      "colorTextButtonSuccessBorderedActive": "#3fa34c",
      "colorTextButtonSuccessBorderedHover": "#42ac50",
      "colorTextButtonSuccessHover": "#fff",
      "colorTextButtonWarning": "#fff",
      "colorTextButtonWarningActive": "#fff",
      "colorTextButtonWarningBordered": "#f9971e",
      "colorTextButtonWarningBorderedActive": "#e68206",
      "colorTextButtonWarningBorderedHover": "#f48a06",
      "colorTextButtonWarningHover": "#fff",
      "colorTextError": "#d21c1c",
      "colorTextInfo": "#0176D2",
      "colorTextInput": "#46515e",
      "colorTextInputDisabled": "#bac7d5",
      "colorTextLinkPrimary": "#00a991",
      "colorTextLinkPrimaryHover": "#00a991",
      "colorTextLinkSecondary": "#171b1e",
      "colorTextLinkSecondaryHover": "#00a991",
      "colorTextPrimary": "#46515e",
      "colorTextSecondary": "#7f91a8",
      "durationFast": "0.2s",
      "durationNormal": "0.3s",
      "durationSlow": "0.4s",
      "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
      "fontSizeButtonLarge": "16px",
      "fontSizeButtonNormal": "14px",
      "fontSizeButtonSmall": "12px",
      "fontSizeHeadingDisplay": "40px",
      "fontSizeHeadingTitle1": "28px",
      "fontSizeHeadingTitle2": "22px",
      "fontSizeHeadingTitle3": "16px",
      "fontSizeInputNormal": "16px",
      "fontSizeInputSmall": "14px",
      "fontSizeLabelForm": "14px",
      "fontSizeMessage": "14px",
      "fontSizeMessageForm": "12px",
      "fontSizeTextLarge": "16px",
      "fontSizeTextNormal": "14px",
      "fontSizeTextSmall": "12px",
      "fontWeightBold": "700",
      "fontWeightHeadingDisplay": "700",
      "fontWeightHeadingTitle1": "700",
      "fontWeightHeadingTitle2": "500",
      "fontWeightHeadingTitle3": "500",
      "fontWeightLinks": "500",
      "fontWeightMedium": "500",
      "fontWeightNormal": "400",
      "heightButtonLarge": "52px",
      "heightButtonNormal": "44px",
      "heightButtonSmall": "32px",
      "heightCheckbox": "20px",
      "heightCountryFlag": "20px",
      "heightIconLarge": "32px",
      "heightIconMedium": "24px",
      "heightIconSmall": "16px",
      "heightInputLarge": "52px",
      "heightInputNormal": "44px",
      "heightInputSmall": "32px",
      "heightRadioButton": "20px",
      "lineHeightHeading": "1.2",
      "lineHeightText": "1.4",
      "marginButtonIconLarge": "16px",
      "marginButtonIconNormal": "12px",
      "marginButtonIconSmall": "8px",
      "modifierScaleButtonActive": 0.9,
      "opacityButtonDisabled": "0.3",
      "opacityCheckboxDisabled": "0.5",
      "opacityOverlay": "0.8",
      "opacityRadioButtonDisabled": "0.5",
      "paddingAlert": "16px",
      "paddingAlertWithIcon": "12px",
      "paddingButtonLarge": "28px",
      "paddingButtonLargeWithIcon": "12px",
      "paddingButtonNormal": "16px",
      "paddingButtonNormalWithIcon": "8px",
      "paddingButtonSmall": "12px",
      "paddingButtonSmallWithIcon": "8px",
      "paddingInputNormal": "16px",
      "paddingInputSmall": "12px",
      "paletteBlueDark": "#07405c",
      "paletteBlueLight": "#e0f6ff",
      "paletteBlueLightActive": "#b0e8fe",
      "paletteBlueLightHover": "#c8effe",
      "paletteBlueNormal": "#0176D2",
      "paletteBlueNormalActive": "#0064b2",
      "paletteBlueNormalHover": "#006abd",
      "paletteCloudLight": "#f5f7f9",
      "paletteCloudLightActive": "#d6dee6",
      "paletteCloudLightHover": "#e5eaef",
      "paletteCloudNormal": "#e8edf1",
      "paletteCloudNormalActive": "#cad5df",
      "paletteCloudNormalHover": "#d9e1e8",
      "paletteGreenDark": "#065d12",
      "paletteGreenLight": "#e7f3e8",
      "paletteGreenLightActive": "#c7e3c9",
      "paletteGreenLightHover": "#d7ebd8",
      "paletteGreenNormal": "#46B655",
      "paletteGreenNormalActive": "#3fa34c",
      "paletteGreenNormalHover": "#42ac50",
      "paletteInkDark": "#171b1e",
      "paletteInkLight": "#7f91a8",
      "paletteInkLightActive": "#5f738c",
      "paletteInkLightHover": "#6d819c",
      "paletteInkLighter": "#bac7d5",
      "paletteInkLighterActive": "#94a8be",
      "paletteInkLighterHover": "#a6b6c8",
      "paletteInkNormal": "#46515e",
      "paletteInkNormalActive": "#38404b",
      "paletteInkNormalHover": "#3f4854",
      "paletteOrangeDark": "#a93610",
      "paletteOrangeLight": "#fcf1cd",
      "paletteOrangeLightActive": "#f9e4a1",
      "paletteOrangeLightHover": "#faeab7",
      "paletteOrangeNormal": "#f9971e",
      "paletteOrangeNormalActive": "#e68206",
      "paletteOrangeNormalHover": "#f48a06",
      "paletteProductDark": "#005448",
      "paletteProductLight": "#9ae5da",
      "paletteProductLightActive": "#64d7c6",
      "paletteProductLightHover": "#7fded0",
      "paletteProductNormal": "#00a991",
      "paletteProductNormalActive": "#008f7b",
      "paletteProductNormalHover": "#009882",
      "paletteRedDark": "#650808",
      "paletteRedLight": "#fae8e8",
      "paletteRedLightActive": "#f1c0c0",
      "paletteRedLightHover": "#f5d4d4",
      "paletteRedNormal": "#d21c1c",
      "paletteRedNormalActive": "#b21717",
      "paletteRedNormalHover": "#bd1919",
      "paletteSocialFacebook": "#3b5998",
      "paletteSocialFacebookActive": "#354f88",
      "paletteSocialFacebookHover": "#385490",
      "paletteWhite": "#fff",
      "paletteWhiteActive": "#e5eaef",
      "paletteWhiteHover": "#f5f7f9",
      "spaceLarge": "24px",
      "spaceMedium": "16px",
      "spaceSmall": "12px",
      "spaceXLarge": "32px",
      "spaceXSmall": "8px",
      "spaceXXLarge": "40px",
      "spaceXXSmall": "4px",
      "spaceXXXLarge": "52px",
      "textDecorationTextLinkPrimary": "none",
      "textDecorationTextLinkPrimaryHover": "underline",
      "textDecorationTextLinkSecondary": "underline",
      "textDecorationTextLinkSecondaryHover": "underline",
      "widthCheckbox": "20px",
      "widthCountryFlag": "20px",
      "widthIconLarge": "32px",
      "widthIconMedium": "24px",
      "widthIconSmall": "16px",
      "widthRadioButton": "20px",
      "zIndexDefault": "1",
      "zIndexModal": "825",
      "zIndexModalOverlay": "800",
      "zIndexOnTheTop": "900",
      "zIndexSticky": "100",
    }
  }
  transparent={false}
  type="primary"
  width={0}
>
  <ButtonLink__StyledButtonLink
    component="button"
    external={true}
    href="https://kiwi.com"
    size="normal"
    sizeIcon="medium"
    target="_blank"
    theme={
      Object {
        "backgroundAlertCritical": "#fae8e8",
        "backgroundAlertInfo": "#e0f6ff",
        "backgroundAlertSuccess": "#e7f3e8",
        "backgroundAlertWarning": "#fcf1cd",
        "backgroundBody": "#f5f7f9",
        "backgroundButtonBordered": "transparent",
        "backgroundButtonBorderedActive": "#fff",
        "backgroundButtonBorderedHover": "#f5f7f9",
        "backgroundButtonCritical": "#d21c1c",
        "backgroundButtonCriticalActive": "#b21717",
        "backgroundButtonCriticalHover": "#bd1919",
        "backgroundButtonFacebook": "#3b5998",
        "backgroundButtonFacebookActive": "#354f88",
        "backgroundButtonFacebookHover": "#385490",
        "backgroundButtonGoogle": "#f5f7f9",
        "backgroundButtonGoogleActive": "#d6dee6",
        "backgroundButtonGoogleHover": "#e5eaef",
        "backgroundButtonInfo": "#0176D2",
        "backgroundButtonInfoActive": "#0064b2",
        "backgroundButtonInfoHover": "#006abd",
        "backgroundButtonLinkPrimary": "transparent",
        "backgroundButtonLinkPrimaryActive": "#d6dee6",
        "backgroundButtonLinkPrimaryHover": "#e5eaef",
        "backgroundButtonLinkSecondary": "transparent",
        "backgroundButtonLinkSecondaryActive": "#d6dee6",
        "backgroundButtonLinkSecondaryHover": "#e5eaef",
        "backgroundButtonPrimary": "#00a991",
        "backgroundButtonPrimaryActive": "#008f7b",
        "backgroundButtonPrimaryHover": "#009882",
        "backgroundButtonSecondary": "#e8edf1",
        "backgroundButtonSecondaryActive": "#cad5df",
        "backgroundButtonSecondaryHover": "#d9e1e8",
        "backgroundButtonSuccess": "#46B655",
        "backgroundButtonSuccessActive": "#3fa34c",
        "backgroundButtonSuccessHover": "#42ac50",
        "backgroundButtonWarning": "#f9971e",
        "backgroundButtonWarningActive": "#e68206",
        "backgroundButtonWarningHover": "#f48a06",
        "backgroundCard": "#fff",
        "backgroundCarrierLogo": "transparent",
        "backgroundInput": "#fff",
        "backgroundInputDisabled": "#e8edf1",
        "backgroundModal": "#fff",
        "borderColorButtonCriticalBordered": "#d21c1c",
        "borderColorButtonCriticalBorderedActive": "#b21717",
        "borderColorButtonCriticalBorderedHover": "#bd1919",
        "borderColorButtonFacebookBordered": "#3b5998",
        "borderColorButtonFacebookBorderedActive": "#354f88",
        "borderColorButtonFacebookBorderedHover": "#385490",
        "borderColorButtonGoogleBordered": "#46515e",
        "borderColorButtonGoogleBorderedActive": "#38404b",
        "borderColorButtonGoogleBorderedHover": "#3f4854",
        "borderColorButtonInfoBordered": "#0176D2",
        "borderColorButtonInfoBorderedActive": "#0064b2",
        "borderColorButtonInfoBorderedHover": "#006abd",
        "borderColorButtonPrimaryBordered": "#00a991",
        "borderColorButtonPrimaryBorderedActive": "#008f7b",
        "borderColorButtonPrimaryBorderedHover": "#009882",
        "borderColorButtonSecondaryBordered": "#46515e",
        "borderColorButtonSecondaryBorderedActive": "#38404b",
        "borderColorButtonSecondaryBorderedHover": "#3f4854",
        "borderColorButtonSuccessBordered": "#46B655",
        "borderColorButtonSuccessBorderedActive": "#3fa34c",
        "borderColorButtonSuccessBorderedHover": "#42ac50",
        "borderColorButtonWarningBordered": "#f9971e",
        "borderColorButtonWarningBorderedActive": "#e68206",
        "borderColorButtonWarningBorderedHover": "#f48a06",
        "borderColorCard": "#e8edf1",
        "borderColorInput": "#bac7d5",
        "borderColorInputActive": "#94a8be",
        "borderColorInputError": "#d21c1c",
        "borderColorInputErrorFocus": "#d21c1c",
        "borderColorInputFocus": "#0176D2",
        "borderColorInputHover": "#a6b6c8",
        "borderColorModal": "#e8edf1",
        "borderColorTableCell": "#bac7d5",
        "borderRadiusCircle": "50%",
        "borderRadiusLarge": "6px",
        "borderRadiusNormal": "3px",
        "borderRadiusSmall": "2px",
        "borderStyleCard": "solid",
        "borderStyleInput": "solid",
        "borderWidthCard": "1px",
        "borderWidthInput": "1px",
        "boxShadowInputErrorFocus": "0px 0px 3px 1px rgba(210,28,28,0.3)",
        "boxShadowInputFocus": "0px 0px 3px 1px rgba(1,118,210,0.3)",
        "colorAlertIconCritical": "#d21c1c",
        "colorAlertIconInfo": "#0176D2",
        "colorAlertIconSuccess": "#46B655",
        "colorAlertIconWarning": "#f9971e",
        "colorHeading": "#171b1e",
        "colorHeadingInverted": "#fff",
        "colorIconAttention": "#171b1e",
        "colorIconCheckbox": "#00a991",
        "colorIconCheckboxDisabled": "#bac7d5",
        "colorIconInput": "#bac7d5",
        "colorIconPrimary": "#46515e",
        "colorIconRadioButton": "#00a991",
        "colorIconRadioButtonDisabled": "#bac7d5",
        "colorIconSecondary": "#7f91a8",
        "colorIconTerciary": "#bac7d5",
        "colorLabelForm": "#46515e",
        "colorLabelFormFilled": "#7f91a8",
        "colorPlaceholderInput": "#bac7d5",
        "colorTextAlertCritical": "#650808",
        "colorTextAlertInfo": "#07405c",
        "colorTextAlertSuccess": "#065d12",
        "colorTextAlertWarning": "#a93610",
        "colorTextAttention": "#171b1e",
        "colorTextButtonCritical": "#fff",
        "colorTextButtonCriticalActive": "#fff",
        "colorTextButtonCriticalBordered": "#d21c1c",
        "colorTextButtonCriticalBorderedActive": "#b21717",
        "colorTextButtonCriticalBorderedHover": "#bd1919",
        "colorTextButtonCriticalHover": "#fff",
        "colorTextButtonFacebook": "#fff",
        "colorTextButtonFacebookActive": "#fff",
        "colorTextButtonFacebookBordered": "#3b5998",
        "colorTextButtonFacebookBorderedActive": "#354f88",
        "colorTextButtonFacebookBorderedHover": "#385490",
        "colorTextButtonFacebookHover": "#fff",
        "colorTextButtonFilled": "#fff",
        "colorTextButtonFilledActive": "#fff",
        "colorTextButtonFilledHover": "#fff",
        "colorTextButtonGoogle": "#46515e",
        "colorTextButtonGoogleActive": "#38404b",
        "colorTextButtonGoogleBordered": "#46515e",
        "colorTextButtonGoogleBorderedActive": "#38404b",
        "colorTextButtonGoogleBorderedHover": "#3f4854",
        "colorTextButtonGoogleHover": "#3f4854",
        "colorTextButtonInfo": "#fff",
        "colorTextButtonInfoActive": "#fff",
        "colorTextButtonInfoBordered": "#0176D2",
        "colorTextButtonInfoBorderedActive": "#0064b2",
        "colorTextButtonInfoBorderedHover": "#006abd",
        "colorTextButtonInfoHover": "#fff",
        "colorTextButtonLinkPrimary": "#00a991",
        "colorTextButtonLinkPrimaryActive": "#008f7b",
        "colorTextButtonLinkPrimaryHover": "#009882",
        "colorTextButtonLinkSecondary": "#46515e",
        "colorTextButtonLinkSecondaryActive": "#38404b",
        "colorTextButtonLinkSecondaryHover": "#3f4854",
        "colorTextButtonPrimary": "#fff",
        "colorTextButtonPrimaryActive": "#fff",
        "colorTextButtonPrimaryBordered": "#00a991",
        "colorTextButtonPrimaryBorderedActive": "#008f7b",
        "colorTextButtonPrimaryBorderedHover": "#009882",
        "colorTextButtonPrimaryHover": "#fff",
        "colorTextButtonSecondary": "#46515e",
        "colorTextButtonSecondaryActive": "#38404b",
        "colorTextButtonSecondaryBordered": "#46515e",
        "colorTextButtonSecondaryBorderedActive": "#38404b",
        "colorTextButtonSecondaryBorderedHover": "#3f4854",
        "colorTextButtonSecondaryHover": "#3f4854",
        "colorTextButtonSuccess": "#fff",
        "colorTextButtonSuccessActive": "#fff",
        "colorTextButtonSuccessBordered": "#46B655",
        "colorTextButtonSuccessBorderedActive": "#3fa34c",
        "colorTextButtonSuccessBorderedHover": "#42ac50",
        "colorTextButtonSuccessHover": "#fff",
        "colorTextButtonWarning": "#fff",
        "colorTextButtonWarningActive": "#fff",
        "colorTextButtonWarningBordered": "#f9971e",
        "colorTextButtonWarningBorderedActive": "#e68206",
        "colorTextButtonWarningBorderedHover": "#f48a06",
        "colorTextButtonWarningHover": "#fff",
        "colorTextError": "#d21c1c",
        "colorTextInfo": "#0176D2",
        "colorTextInput": "#46515e",
        "colorTextInputDisabled": "#bac7d5",
        "colorTextLinkPrimary": "#00a991",
        "colorTextLinkPrimaryHover": "#00a991",
        "colorTextLinkSecondary": "#171b1e",
        "colorTextLinkSecondaryHover": "#00a991",
        "colorTextPrimary": "#46515e",
        "colorTextSecondary": "#7f91a8",
        "durationFast": "0.2s",
        "durationNormal": "0.3s",
        "durationSlow": "0.4s",
        "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
        "fontSizeButtonLarge": "16px",
        "fontSizeButtonNormal": "14px",
        "fontSizeButtonSmall": "12px",
        "fontSizeHeadingDisplay": "40px",
        "fontSizeHeadingTitle1": "28px",
        "fontSizeHeadingTitle2": "22px",
        "fontSizeHeadingTitle3": "16px",
        "fontSizeInputNormal": "16px",
        "fontSizeInputSmall": "14px",
        "fontSizeLabelForm": "14px",
        "fontSizeMessage": "14px",
        "fontSizeMessageForm": "12px",
        "fontSizeTextLarge": "16px",
        "fontSizeTextNormal": "14px",
        "fontSizeTextSmall": "12px",
        "fontWeightBold": "700",
        "fontWeightHeadingDisplay": "700",
        "fontWeightHeadingTitle1": "700",
        "fontWeightHeadingTitle2": "500",
        "fontWeightHeadingTitle3": "500",
        "fontWeightLinks": "500",
        "fontWeightMedium": "500",
        "fontWeightNormal": "400",
        "heightButtonLarge": "52px",
        "heightButtonNormal": "44px",
        "heightButtonSmall": "32px",
        "heightCheckbox": "20px",
        "heightCountryFlag": "20px",
        "heightIconLarge": "32px",
        "heightIconMedium": "24px",
        "heightIconSmall": "16px",
        "heightInputLarge": "52px",
        "heightInputNormal": "44px",
        "heightInputSmall": "32px",
        "heightRadioButton": "20px",
        "lineHeightHeading": "1.2",
        "lineHeightText": "1.4",
        "marginButtonIconLarge": "16px",
        "marginButtonIconNormal": "12px",
        "marginButtonIconSmall": "8px",
        "modifierScaleButtonActive": 0.9,
        "opacityButtonDisabled": "0.3",
        "opacityCheckboxDisabled": "0.5",
        "opacityOverlay": "0.8",
        "opacityRadioButtonDisabled": "0.5",
        "paddingAlert": "16px",
        "paddingAlertWithIcon": "12px",
        "paddingButtonLarge": "28px",
        "paddingButtonLargeWithIcon": "12px",
        "paddingButtonNormal": "16px",
        "paddingButtonNormalWithIcon": "8px",
        "paddingButtonSmall": "12px",
        "paddingButtonSmallWithIcon": "8px",
        "paddingInputNormal": "16px",
        "paddingInputSmall": "12px",
        "paletteBlueDark": "#07405c",
        "paletteBlueLight": "#e0f6ff",
        "paletteBlueLightActive": "#b0e8fe",
        "paletteBlueLightHover": "#c8effe",
        "paletteBlueNormal": "#0176D2",
        "paletteBlueNormalActive": "#0064b2",
        "paletteBlueNormalHover": "#006abd",
        "paletteCloudLight": "#f5f7f9",
        "paletteCloudLightActive": "#d6dee6",
        "paletteCloudLightHover": "#e5eaef",
        "paletteCloudNormal": "#e8edf1",
        "paletteCloudNormalActive": "#cad5df",
        "paletteCloudNormalHover": "#d9e1e8",
        "paletteGreenDark": "#065d12",
        "paletteGreenLight": "#e7f3e8",
        "paletteGreenLightActive": "#c7e3c9",
        "paletteGreenLightHover": "#d7ebd8",
        "paletteGreenNormal": "#46B655",
        "paletteGreenNormalActive": "#3fa34c",
        "paletteGreenNormalHover": "#42ac50",
        "paletteInkDark": "#171b1e",
        "paletteInkLight": "#7f91a8",
        "paletteInkLightActive": "#5f738c",
        "paletteInkLightHover": "#6d819c",
        "paletteInkLighter": "#bac7d5",
        "paletteInkLighterActive": "#94a8be",
        "paletteInkLighterHover": "#a6b6c8",
        "paletteInkNormal": "#46515e",
        "paletteInkNormalActive": "#38404b",
        "paletteInkNormalHover": "#3f4854",
        "paletteOrangeDark": "#a93610",
        "paletteOrangeLight": "#fcf1cd",
        "paletteOrangeLightActive": "#f9e4a1",
        "paletteOrangeLightHover": "#faeab7",
        "paletteOrangeNormal": "#f9971e",
        "paletteOrangeNormalActive": "#e68206",
        "paletteOrangeNormalHover": "#f48a06",
        "paletteProductDark": "#005448",
        "paletteProductLight": "#9ae5da",
        "paletteProductLightActive": "#64d7c6",
        "paletteProductLightHover": "#7fded0",
        "paletteProductNormal": "#00a991",
        "paletteProductNormalActive": "#008f7b",
        "paletteProductNormalHover": "#009882",
        "paletteRedDark": "#650808",
        "paletteRedLight": "#fae8e8",
        "paletteRedLightActive": "#f1c0c0",
        "paletteRedLightHover": "#f5d4d4",
        "paletteRedNormal": "#d21c1c",
        "paletteRedNormalActive": "#b21717",
        "paletteRedNormalHover": "#bd1919",
        "paletteSocialFacebook": "#3b5998",
        "paletteSocialFacebookActive": "#354f88",
        "paletteSocialFacebookHover": "#385490",
        "paletteWhite": "#fff",
        "paletteWhiteActive": "#e5eaef",
        "paletteWhiteHover": "#f5f7f9",
        "spaceLarge": "24px",
        "spaceMedium": "16px",
        "spaceSmall": "12px",
        "spaceXLarge": "32px",
        "spaceXSmall": "8px",
        "spaceXXLarge": "40px",
        "spaceXXSmall": "4px",
        "spaceXXXLarge": "52px",
        "textDecorationTextLinkPrimary": "none",
        "textDecorationTextLinkPrimaryHover": "underline",
        "textDecorationTextLinkSecondary": "underline",
        "textDecorationTextLinkSecondaryHover": "underline",
        "widthCheckbox": "20px",
        "widthCountryFlag": "20px",
        "widthIconLarge": "32px",
        "widthIconMedium": "24px",
        "widthIconSmall": "16px",
        "widthRadioButton": "20px",
        "zIndexDefault": "1",
        "zIndexModal": "825",
        "zIndexModalOverlay": "800",
        "zIndexOnTheTop": "900",
        "zIndexSticky": "100",
      }
    }
    tokens={
      Object {
        "backgroundButton": Object {
          "primary": "transparent",
          "secondary": "transparent",
        },
        "backgroundButtonActive": Object {
          "primary": "#e5eaef",
          "secondary": "#e5eaef",
        },
        "backgroundButtonHover": Object {
          "primary": "#e5eaef",
          "secondary": "#e5eaef",
        },
        "colorTextButton": Object {
          "primary": "#00a991",
          "secondary": "#46515e",
        },
        "colorTextButtonActive": Object {
          "primary": "#008f7b",
          "secondary": "#38404b",
        },
        "colorTextButtonHover": Object {
          "primary": "#009882",
          "secondary": "#3f4854",
        },
        "fontSizeButton": Object {
          "large": "16px",
          "normal": "14px",
          "small": "12px",
        },
        "heightButton": Object {
          "large": "52px",
          "normal": "44px",
          "small": "32px",
        },
        "marginRightIcon": Object {
          "large": "16px",
          "normal": "12px",
          "small": "8px",
        },
        "paddingButton": Object {
          "large": "28px",
          "normal": "16px",
          "small": "12px",
        },
        "paddingButtonWithIcon": Object {
          "large": "12px",
          "normal": "8px",
          "small": "8px",
        },
      }
    }
    transparent={false}
    type="primary"
    width={0}
  >
    <Component
      className="ButtonLink__StyledButtonLink-eyUiPe kLZsNJ"
      component="button"
      external={true}
      href="https://kiwi.com"
      size="normal"
      sizeIcon="medium"
      target="_blank"
      theme={
        Object {
          "backgroundAlertCritical": "#fae8e8",
          "backgroundAlertInfo": "#e0f6ff",
          "backgroundAlertSuccess": "#e7f3e8",
          "backgroundAlertWarning": "#fcf1cd",
          "backgroundBody": "#f5f7f9",
          "backgroundButtonBordered": "transparent",
          "backgroundButtonBorderedActive": "#fff",
          "backgroundButtonBorderedHover": "#f5f7f9",
          "backgroundButtonCritical": "#d21c1c",
          "backgroundButtonCriticalActive": "#b21717",
          "backgroundButtonCriticalHover": "#bd1919",
          "backgroundButtonFacebook": "#3b5998",
          "backgroundButtonFacebookActive": "#354f88",
          "backgroundButtonFacebookHover": "#385490",
          "backgroundButtonGoogle": "#f5f7f9",
          "backgroundButtonGoogleActive": "#d6dee6",
          "backgroundButtonGoogleHover": "#e5eaef",
          "backgroundButtonInfo": "#0176D2",
          "backgroundButtonInfoActive": "#0064b2",
          "backgroundButtonInfoHover": "#006abd",
          "backgroundButtonLinkPrimary": "transparent",
          "backgroundButtonLinkPrimaryActive": "#d6dee6",
          "backgroundButtonLinkPrimaryHover": "#e5eaef",
          "backgroundButtonLinkSecondary": "transparent",
          "backgroundButtonLinkSecondaryActive": "#d6dee6",
          "backgroundButtonLinkSecondaryHover": "#e5eaef",
          "backgroundButtonPrimary": "#00a991",
          "backgroundButtonPrimaryActive": "#008f7b",
          "backgroundButtonPrimaryHover": "#009882",
          "backgroundButtonSecondary": "#e8edf1",
          "backgroundButtonSecondaryActive": "#cad5df",
          "backgroundButtonSecondaryHover": "#d9e1e8",
          "backgroundButtonSuccess": "#46B655",
          "backgroundButtonSuccessActive": "#3fa34c",
          "backgroundButtonSuccessHover": "#42ac50",
          "backgroundButtonWarning": "#f9971e",
          "backgroundButtonWarningActive": "#e68206",
          "backgroundButtonWarningHover": "#f48a06",
          "backgroundCard": "#fff",
          "backgroundCarrierLogo": "transparent",
          "backgroundInput": "#fff",
          "backgroundInputDisabled": "#e8edf1",
          "backgroundModal": "#fff",
          "borderColorButtonCriticalBordered": "#d21c1c",
          "borderColorButtonCriticalBorderedActive": "#b21717",
          "borderColorButtonCriticalBorderedHover": "#bd1919",
          "borderColorButtonFacebookBordered": "#3b5998",
          "borderColorButtonFacebookBorderedActive": "#354f88",
          "borderColorButtonFacebookBorderedHover": "#385490",
          "borderColorButtonGoogleBordered": "#46515e",
          "borderColorButtonGoogleBorderedActive": "#38404b",
          "borderColorButtonGoogleBorderedHover": "#3f4854",
          "borderColorButtonInfoBordered": "#0176D2",
          "borderColorButtonInfoBorderedActive": "#0064b2",
          "borderColorButtonInfoBorderedHover": "#006abd",
          "borderColorButtonPrimaryBordered": "#00a991",
          "borderColorButtonPrimaryBorderedActive": "#008f7b",
          "borderColorButtonPrimaryBorderedHover": "#009882",
          "borderColorButtonSecondaryBordered": "#46515e",
          "borderColorButtonSecondaryBorderedActive": "#38404b",
          "borderColorButtonSecondaryBorderedHover": "#3f4854",
          "borderColorButtonSuccessBordered": "#46B655",
          "borderColorButtonSuccessBorderedActive": "#3fa34c",
          "borderColorButtonSuccessBorderedHover": "#42ac50",
          "borderColorButtonWarningBordered": "#f9971e",
          "borderColorButtonWarningBorderedActive": "#e68206",
          "borderColorButtonWarningBorderedHover": "#f48a06",
          "borderColorCard": "#e8edf1",
          "borderColorInput": "#bac7d5",
          "borderColorInputActive": "#94a8be",
          "borderColorInputError": "#d21c1c",
          "borderColorInputErrorFocus": "#d21c1c",
          "borderColorInputFocus": "#0176D2",
          "borderColorInputHover": "#a6b6c8",
          "borderColorModal": "#e8edf1",
          "borderColorTableCell": "#bac7d5",
          "borderRadiusCircle": "50%",
          "borderRadiusLarge": "6px",
          "borderRadiusNormal": "3px",
          "borderRadiusSmall": "2px",
          "borderStyleCard": "solid",
          "borderStyleInput": "solid",
          "borderWidthCard": "1px",
          "borderWidthInput": "1px",
          "boxShadowInputErrorFocus": "0px 0px 3px 1px rgba(210,28,28,0.3)",
          "boxShadowInputFocus": "0px 0px 3px 1px rgba(1,118,210,0.3)",
          "colorAlertIconCritical": "#d21c1c",
          "colorAlertIconInfo": "#0176D2",
          "colorAlertIconSuccess": "#46B655",
          "colorAlertIconWarning": "#f9971e",
          "colorHeading": "#171b1e",
          "colorHeadingInverted": "#fff",
          "colorIconAttention": "#171b1e",
          "colorIconCheckbox": "#00a991",
          "colorIconCheckboxDisabled": "#bac7d5",
          "colorIconInput": "#bac7d5",
          "colorIconPrimary": "#46515e",
          "colorIconRadioButton": "#00a991",
          "colorIconRadioButtonDisabled": "#bac7d5",
          "colorIconSecondary": "#7f91a8",
          "colorIconTerciary": "#bac7d5",
          "colorLabelForm": "#46515e",
          "colorLabelFormFilled": "#7f91a8",
          "colorPlaceholderInput": "#bac7d5",
          "colorTextAlertCritical": "#650808",
          "colorTextAlertInfo": "#07405c",
          "colorTextAlertSuccess": "#065d12",
          "colorTextAlertWarning": "#a93610",
          "colorTextAttention": "#171b1e",
          "colorTextButtonCritical": "#fff",
          "colorTextButtonCriticalActive": "#fff",
          "colorTextButtonCriticalBordered": "#d21c1c",
          "colorTextButtonCriticalBorderedActive": "#b21717",
          "colorTextButtonCriticalBorderedHover": "#bd1919",
          "colorTextButtonCriticalHover": "#fff",
          "colorTextButtonFacebook": "#fff",
          "colorTextButtonFacebookActive": "#fff",
          "colorTextButtonFacebookBordered": "#3b5998",
          "colorTextButtonFacebookBorderedActive": "#354f88",
          "colorTextButtonFacebookBorderedHover": "#385490",
          "colorTextButtonFacebookHover": "#fff",
          "colorTextButtonFilled": "#fff",
          "colorTextButtonFilledActive": "#fff",
          "colorTextButtonFilledHover": "#fff",
          "colorTextButtonGoogle": "#46515e",
          "colorTextButtonGoogleActive": "#38404b",
          "colorTextButtonGoogleBordered": "#46515e",
          "colorTextButtonGoogleBorderedActive": "#38404b",
          "colorTextButtonGoogleBorderedHover": "#3f4854",
          "colorTextButtonGoogleHover": "#3f4854",
          "colorTextButtonInfo": "#fff",
          "colorTextButtonInfoActive": "#fff",
          "colorTextButtonInfoBordered": "#0176D2",
          "colorTextButtonInfoBorderedActive": "#0064b2",
          "colorTextButtonInfoBorderedHover": "#006abd",
          "colorTextButtonInfoHover": "#fff",
          "colorTextButtonLinkPrimary": "#00a991",
          "colorTextButtonLinkPrimaryActive": "#008f7b",
          "colorTextButtonLinkPrimaryHover": "#009882",
          "colorTextButtonLinkSecondary": "#46515e",
          "colorTextButtonLinkSecondaryActive": "#38404b",
          "colorTextButtonLinkSecondaryHover": "#3f4854",
          "colorTextButtonPrimary": "#fff",
          "colorTextButtonPrimaryActive": "#fff",
          "colorTextButtonPrimaryBordered": "#00a991",
          "colorTextButtonPrimaryBorderedActive": "#008f7b",
          "colorTextButtonPrimaryBorderedHover": "#009882",
          "colorTextButtonPrimaryHover": "#fff",
          "colorTextButtonSecondary": "#46515e",
          "colorTextButtonSecondaryActive": "#38404b",
          "colorTextButtonSecondaryBordered": "#46515e",
          "colorTextButtonSecondaryBorderedActive": "#38404b",
          "colorTextButtonSecondaryBorderedHover": "#3f4854",
          "colorTextButtonSecondaryHover": "#3f4854",
          "colorTextButtonSuccess": "#fff",
          "colorTextButtonSuccessActive": "#fff",
          "colorTextButtonSuccessBordered": "#46B655",
          "colorTextButtonSuccessBorderedActive": "#3fa34c",
          "colorTextButtonSuccessBorderedHover": "#42ac50",
          "colorTextButtonSuccessHover": "#fff",
          "colorTextButtonWarning": "#fff",
          "colorTextButtonWarningActive": "#fff",
          "colorTextButtonWarningBordered": "#f9971e",
          "colorTextButtonWarningBorderedActive": "#e68206",
          "colorTextButtonWarningBorderedHover": "#f48a06",
          "colorTextButtonWarningHover": "#fff",
          "colorTextError": "#d21c1c",
          "colorTextInfo": "#0176D2",
          "colorTextInput": "#46515e",
          "colorTextInputDisabled": "#bac7d5",
          "colorTextLinkPrimary": "#00a991",
          "colorTextLinkPrimaryHover": "#00a991",
          "colorTextLinkSecondary": "#171b1e",
          "colorTextLinkSecondaryHover": "#00a991",
          "colorTextPrimary": "#46515e",
          "colorTextSecondary": "#7f91a8",
          "durationFast": "0.2s",
          "durationNormal": "0.3s",
          "durationSlow": "0.4s",
          "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
          "fontSizeButtonLarge": "16px",
          "fontSizeButtonNormal": "14px",
          "fontSizeButtonSmall": "12px",
          "fontSizeHeadingDisplay": "40px",
          "fontSizeHeadingTitle1": "28px",
          "fontSizeHeadingTitle2": "22px",
          "fontSizeHeadingTitle3": "16px",
          "fontSizeInputNormal": "16px",
          "fontSizeInputSmall": "14px",
          "fontSizeLabelForm": "14px",
          "fontSizeMessage": "14px",
          "fontSizeMessageForm": "12px",
          "fontSizeTextLarge": "16px",
          "fontSizeTextNormal": "14px",
          "fontSizeTextSmall": "12px",
          "fontWeightBold": "700",
          "fontWeightHeadingDisplay": "700",
          "fontWeightHeadingTitle1": "700",
          "fontWeightHeadingTitle2": "500",
          "fontWeightHeadingTitle3": "500",
          "fontWeightLinks": "500",
          "fontWeightMedium": "500",
          "fontWeightNormal": "400",
          "heightButtonLarge": "52px",
          "heightButtonNormal": "44px",
          "heightButtonSmall": "32px",
          "heightCheckbox": "20px",
          "heightCountryFlag": "20px",
          "heightIconLarge": "32px",
          "heightIconMedium": "24px",
          "heightIconSmall": "16px",
          "heightInputLarge": "52px",
          "heightInputNormal": "44px",
          "heightInputSmall": "32px",
          "heightRadioButton": "20px",
          "lineHeightHeading": "1.2",
          "lineHeightText": "1.4",
          "marginButtonIconLarge": "16px",
          "marginButtonIconNormal": "12px",
          "marginButtonIconSmall": "8px",
          "modifierScaleButtonActive": 0.9,
          "opacityButtonDisabled": "0.3",
          "opacityCheckboxDisabled": "0.5",
          "opacityOverlay": "0.8",
          "opacityRadioButtonDisabled": "0.5",
          "paddingAlert": "16px",
          "paddingAlertWithIcon": "12px",
          "paddingButtonLarge": "28px",
          "paddingButtonLargeWithIcon": "12px",
          "paddingButtonNormal": "16px",
          "paddingButtonNormalWithIcon": "8px",
          "paddingButtonSmall": "12px",
          "paddingButtonSmallWithIcon": "8px",
          "paddingInputNormal": "16px",
          "paddingInputSmall": "12px",
          "paletteBlueDark": "#07405c",
          "paletteBlueLight": "#e0f6ff",
          "paletteBlueLightActive": "#b0e8fe",
          "paletteBlueLightHover": "#c8effe",
          "paletteBlueNormal": "#0176D2",
          "paletteBlueNormalActive": "#0064b2",
          "paletteBlueNormalHover": "#006abd",
          "paletteCloudLight": "#f5f7f9",
          "paletteCloudLightActive": "#d6dee6",
          "paletteCloudLightHover": "#e5eaef",
          "paletteCloudNormal": "#e8edf1",
          "paletteCloudNormalActive": "#cad5df",
          "paletteCloudNormalHover": "#d9e1e8",
          "paletteGreenDark": "#065d12",
          "paletteGreenLight": "#e7f3e8",
          "paletteGreenLightActive": "#c7e3c9",
          "paletteGreenLightHover": "#d7ebd8",
          "paletteGreenNormal": "#46B655",
          "paletteGreenNormalActive": "#3fa34c",
          "paletteGreenNormalHover": "#42ac50",
          "paletteInkDark": "#171b1e",
          "paletteInkLight": "#7f91a8",
          "paletteInkLightActive": "#5f738c",
          "paletteInkLightHover": "#6d819c",
          "paletteInkLighter": "#bac7d5",
          "paletteInkLighterActive": "#94a8be",
          "paletteInkLighterHover": "#a6b6c8",
          "paletteInkNormal": "#46515e",
          "paletteInkNormalActive": "#38404b",
          "paletteInkNormalHover": "#3f4854",
          "paletteOrangeDark": "#a93610",
          "paletteOrangeLight": "#fcf1cd",
          "paletteOrangeLightActive": "#f9e4a1",
          "paletteOrangeLightHover": "#faeab7",
          "paletteOrangeNormal": "#f9971e",
          "paletteOrangeNormalActive": "#e68206",
          "paletteOrangeNormalHover": "#f48a06",
          "paletteProductDark": "#005448",
          "paletteProductLight": "#9ae5da",
          "paletteProductLightActive": "#64d7c6",
          "paletteProductLightHover": "#7fded0",
          "paletteProductNormal": "#00a991",
          "paletteProductNormalActive": "#008f7b",
          "paletteProductNormalHover": "#009882",
          "paletteRedDark": "#650808",
          "paletteRedLight": "#fae8e8",
          "paletteRedLightActive": "#f1c0c0",
          "paletteRedLightHover": "#f5d4d4",
          "paletteRedNormal": "#d21c1c",
          "paletteRedNormalActive": "#b21717",
          "paletteRedNormalHover": "#bd1919",
          "paletteSocialFacebook": "#3b5998",
          "paletteSocialFacebookActive": "#354f88",
          "paletteSocialFacebookHover": "#385490",
          "paletteWhite": "#fff",
          "paletteWhiteActive": "#e5eaef",
          "paletteWhiteHover": "#f5f7f9",
          "spaceLarge": "24px",
          "spaceMedium": "16px",
          "spaceSmall": "12px",
          "spaceXLarge": "32px",
          "spaceXSmall": "8px",
          "spaceXXLarge": "40px",
          "spaceXXSmall": "4px",
          "spaceXXXLarge": "52px",
          "textDecorationTextLinkPrimary": "none",
          "textDecorationTextLinkPrimaryHover": "underline",
          "textDecorationTextLinkSecondary": "underline",
          "textDecorationTextLinkSecondaryHover": "underline",
          "widthCheckbox": "20px",
          "widthCountryFlag": "20px",
          "widthIconLarge": "32px",
          "widthIconMedium": "24px",
          "widthIconSmall": "16px",
          "widthRadioButton": "20px",
          "zIndexDefault": "1",
          "zIndexModal": "825",
          "zIndexModalOverlay": "800",
          "zIndexOnTheTop": "900",
          "zIndexSticky": "100",
        }
      }
      tokens={
        Object {
          "backgroundButton": Object {
            "primary": "transparent",
            "secondary": "transparent",
          },
          "backgroundButtonActive": Object {
            "primary": "#e5eaef",
            "secondary": "#e5eaef",
          },
          "backgroundButtonHover": Object {
            "primary": "#e5eaef",
            "secondary": "#e5eaef",
          },
          "colorTextButton": Object {
            "primary": "#00a991",
            "secondary": "#46515e",
          },
          "colorTextButtonActive": Object {
            "primary": "#008f7b",
            "secondary": "#38404b",
          },
          "colorTextButtonHover": Object {
            "primary": "#009882",
            "secondary": "#3f4854",
          },
          "fontSizeButton": Object {
            "large": "16px",
            "normal": "14px",
            "small": "12px",
          },
          "heightButton": Object {
            "large": "52px",
            "normal": "44px",
            "small": "32px",
          },
          "marginRightIcon": Object {
            "large": "16px",
            "normal": "12px",
            "small": "8px",
          },
          "paddingButton": Object {
            "large": "28px",
            "normal": "16px",
            "small": "12px",
          },
          "paddingButtonWithIcon": Object {
            "large": "12px",
            "normal": "8px",
            "small": "8px",
          },
        }
      }
      transparent={false}
      type="primary"
      width={0}
    >
      <a
        className="ButtonLink__StyledButtonLink-eyUiPe kLZsNJ"
        href="https://kiwi.com"
        size="normal"
        target="_blank"
      >
        ButtonLink
      </a>
    </Component>
  </ButtonLink__StyledButtonLink>
</ButtonLink>
`;

exports[`ButtonLink with Icon should match snapshot 2`] = `
<ButtonLink
  component="button"
  external={false}
  href="https://kiwi.com"
  icon={<Airplane />}
  size="normal"
  theme={
    Object {
      "backgroundAlertCritical": "#fae8e8",
      "backgroundAlertInfo": "#e0f6ff",
      "backgroundAlertSuccess": "#e7f3e8",
      "backgroundAlertWarning": "#fcf1cd",
      "backgroundBody": "#f5f7f9",
      "backgroundButtonBordered": "transparent",
      "backgroundButtonBorderedActive": "#fff",
      "backgroundButtonBorderedHover": "#f5f7f9",
      "backgroundButtonCritical": "#d21c1c",
      "backgroundButtonCriticalActive": "#b21717",
      "backgroundButtonCriticalHover": "#bd1919",
      "backgroundButtonFacebook": "#3b5998",
      "backgroundButtonFacebookActive": "#354f88",
      "backgroundButtonFacebookHover": "#385490",
      "backgroundButtonGoogle": "#f5f7f9",
      "backgroundButtonGoogleActive": "#d6dee6",
      "backgroundButtonGoogleHover": "#e5eaef",
      "backgroundButtonInfo": "#0176D2",
      "backgroundButtonInfoActive": "#0064b2",
      "backgroundButtonInfoHover": "#006abd",
      "backgroundButtonLinkPrimary": "transparent",
      "backgroundButtonLinkPrimaryActive": "#d6dee6",
      "backgroundButtonLinkPrimaryHover": "#e5eaef",
      "backgroundButtonLinkSecondary": "transparent",
      "backgroundButtonLinkSecondaryActive": "#d6dee6",
      "backgroundButtonLinkSecondaryHover": "#e5eaef",
      "backgroundButtonPrimary": "#00a991",
      "backgroundButtonPrimaryActive": "#008f7b",
      "backgroundButtonPrimaryHover": "#009882",
      "backgroundButtonSecondary": "#e8edf1",
      "backgroundButtonSecondaryActive": "#cad5df",
      "backgroundButtonSecondaryHover": "#d9e1e8",
      "backgroundButtonSuccess": "#46B655",
      "backgroundButtonSuccessActive": "#3fa34c",
      "backgroundButtonSuccessHover": "#42ac50",
      "backgroundButtonWarning": "#f9971e",
      "backgroundButtonWarningActive": "#e68206",
      "backgroundButtonWarningHover": "#f48a06",
      "backgroundCard": "#fff",
      "backgroundCarrierLogo": "transparent",
      "backgroundInput": "#fff",
      "backgroundInputDisabled": "#e8edf1",
      "backgroundModal": "#fff",
      "borderColorButtonCriticalBordered": "#d21c1c",
      "borderColorButtonCriticalBorderedActive": "#b21717",
      "borderColorButtonCriticalBorderedHover": "#bd1919",
      "borderColorButtonFacebookBordered": "#3b5998",
      "borderColorButtonFacebookBorderedActive": "#354f88",
      "borderColorButtonFacebookBorderedHover": "#385490",
      "borderColorButtonGoogleBordered": "#46515e",
      "borderColorButtonGoogleBorderedActive": "#38404b",
      "borderColorButtonGoogleBorderedHover": "#3f4854",
      "borderColorButtonInfoBordered": "#0176D2",
      "borderColorButtonInfoBorderedActive": "#0064b2",
      "borderColorButtonInfoBorderedHover": "#006abd",
      "borderColorButtonPrimaryBordered": "#00a991",
      "borderColorButtonPrimaryBorderedActive": "#008f7b",
      "borderColorButtonPrimaryBorderedHover": "#009882",
      "borderColorButtonSecondaryBordered": "#46515e",
      "borderColorButtonSecondaryBorderedActive": "#38404b",
      "borderColorButtonSecondaryBorderedHover": "#3f4854",
      "borderColorButtonSuccessBordered": "#46B655",
      "borderColorButtonSuccessBorderedActive": "#3fa34c",
      "borderColorButtonSuccessBorderedHover": "#42ac50",
      "borderColorButtonWarningBordered": "#f9971e",
      "borderColorButtonWarningBorderedActive": "#e68206",
      "borderColorButtonWarningBorderedHover": "#f48a06",
      "borderColorCard": "#e8edf1",
      "borderColorInput": "#bac7d5",
      "borderColorInputActive": "#94a8be",
      "borderColorInputError": "#d21c1c",
      "borderColorInputErrorFocus": "#d21c1c",
      "borderColorInputFocus": "#0176D2",
      "borderColorInputHover": "#a6b6c8",
      "borderColorModal": "#e8edf1",
      "borderColorTableCell": "#bac7d5",
      "borderRadiusCircle": "50%",
      "borderRadiusLarge": "6px",
      "borderRadiusNormal": "3px",
      "borderRadiusSmall": "2px",
      "borderStyleCard": "solid",
      "borderStyleInput": "solid",
      "borderWidthCard": "1px",
      "borderWidthInput": "1px",
      "boxShadowInputErrorFocus": "0px 0px 3px 1px rgba(210,28,28,0.3)",
      "boxShadowInputFocus": "0px 0px 3px 1px rgba(1,118,210,0.3)",
      "colorAlertIconCritical": "#d21c1c",
      "colorAlertIconInfo": "#0176D2",
      "colorAlertIconSuccess": "#46B655",
      "colorAlertIconWarning": "#f9971e",
      "colorHeading": "#171b1e",
      "colorHeadingInverted": "#fff",
      "colorIconAttention": "#171b1e",
      "colorIconCheckbox": "#00a991",
      "colorIconCheckboxDisabled": "#bac7d5",
      "colorIconInput": "#bac7d5",
      "colorIconPrimary": "#46515e",
      "colorIconRadioButton": "#00a991",
      "colorIconRadioButtonDisabled": "#bac7d5",
      "colorIconSecondary": "#7f91a8",
      "colorIconTerciary": "#bac7d5",
      "colorLabelForm": "#46515e",
      "colorLabelFormFilled": "#7f91a8",
      "colorPlaceholderInput": "#bac7d5",
      "colorTextAlertCritical": "#650808",
      "colorTextAlertInfo": "#07405c",
      "colorTextAlertSuccess": "#065d12",
      "colorTextAlertWarning": "#a93610",
      "colorTextAttention": "#171b1e",
      "colorTextButtonCritical": "#fff",
      "colorTextButtonCriticalActive": "#fff",
      "colorTextButtonCriticalBordered": "#d21c1c",
      "colorTextButtonCriticalBorderedActive": "#b21717",
      "colorTextButtonCriticalBorderedHover": "#bd1919",
      "colorTextButtonCriticalHover": "#fff",
      "colorTextButtonFacebook": "#fff",
      "colorTextButtonFacebookActive": "#fff",
      "colorTextButtonFacebookBordered": "#3b5998",
      "colorTextButtonFacebookBorderedActive": "#354f88",
      "colorTextButtonFacebookBorderedHover": "#385490",
      "colorTextButtonFacebookHover": "#fff",
      "colorTextButtonFilled": "#fff",
      "colorTextButtonFilledActive": "#fff",
      "colorTextButtonFilledHover": "#fff",
      "colorTextButtonGoogle": "#46515e",
      "colorTextButtonGoogleActive": "#38404b",
      "colorTextButtonGoogleBordered": "#46515e",
      "colorTextButtonGoogleBorderedActive": "#38404b",
      "colorTextButtonGoogleBorderedHover": "#3f4854",
      "colorTextButtonGoogleHover": "#3f4854",
      "colorTextButtonInfo": "#fff",
      "colorTextButtonInfoActive": "#fff",
      "colorTextButtonInfoBordered": "#0176D2",
      "colorTextButtonInfoBorderedActive": "#0064b2",
      "colorTextButtonInfoBorderedHover": "#006abd",
      "colorTextButtonInfoHover": "#fff",
      "colorTextButtonLinkPrimary": "#00a991",
      "colorTextButtonLinkPrimaryActive": "#008f7b",
      "colorTextButtonLinkPrimaryHover": "#009882",
      "colorTextButtonLinkSecondary": "#46515e",
      "colorTextButtonLinkSecondaryActive": "#38404b",
      "colorTextButtonLinkSecondaryHover": "#3f4854",
      "colorTextButtonPrimary": "#fff",
      "colorTextButtonPrimaryActive": "#fff",
      "colorTextButtonPrimaryBordered": "#00a991",
      "colorTextButtonPrimaryBorderedActive": "#008f7b",
      "colorTextButtonPrimaryBorderedHover": "#009882",
      "colorTextButtonPrimaryHover": "#fff",
      "colorTextButtonSecondary": "#46515e",
      "colorTextButtonSecondaryActive": "#38404b",
      "colorTextButtonSecondaryBordered": "#46515e",
      "colorTextButtonSecondaryBorderedActive": "#38404b",
      "colorTextButtonSecondaryBorderedHover": "#3f4854",
      "colorTextButtonSecondaryHover": "#3f4854",
      "colorTextButtonSuccess": "#fff",
      "colorTextButtonSuccessActive": "#fff",
      "colorTextButtonSuccessBordered": "#46B655",
      "colorTextButtonSuccessBorderedActive": "#3fa34c",
      "colorTextButtonSuccessBorderedHover": "#42ac50",
      "colorTextButtonSuccessHover": "#fff",
      "colorTextButtonWarning": "#fff",
      "colorTextButtonWarningActive": "#fff",
      "colorTextButtonWarningBordered": "#f9971e",
      "colorTextButtonWarningBorderedActive": "#e68206",
      "colorTextButtonWarningBorderedHover": "#f48a06",
      "colorTextButtonWarningHover": "#fff",
      "colorTextError": "#d21c1c",
      "colorTextInfo": "#0176D2",
      "colorTextInput": "#46515e",
      "colorTextInputDisabled": "#bac7d5",
      "colorTextLinkPrimary": "#00a991",
      "colorTextLinkPrimaryHover": "#00a991",
      "colorTextLinkSecondary": "#171b1e",
      "colorTextLinkSecondaryHover": "#00a991",
      "colorTextPrimary": "#46515e",
      "colorTextSecondary": "#7f91a8",
      "durationFast": "0.2s",
      "durationNormal": "0.3s",
      "durationSlow": "0.4s",
      "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
      "fontSizeButtonLarge": "16px",
      "fontSizeButtonNormal": "14px",
      "fontSizeButtonSmall": "12px",
      "fontSizeHeadingDisplay": "40px",
      "fontSizeHeadingTitle1": "28px",
      "fontSizeHeadingTitle2": "22px",
      "fontSizeHeadingTitle3": "16px",
      "fontSizeInputNormal": "16px",
      "fontSizeInputSmall": "14px",
      "fontSizeLabelForm": "14px",
      "fontSizeMessage": "14px",
      "fontSizeMessageForm": "12px",
      "fontSizeTextLarge": "16px",
      "fontSizeTextNormal": "14px",
      "fontSizeTextSmall": "12px",
      "fontWeightBold": "700",
      "fontWeightHeadingDisplay": "700",
      "fontWeightHeadingTitle1": "700",
      "fontWeightHeadingTitle2": "500",
      "fontWeightHeadingTitle3": "500",
      "fontWeightLinks": "500",
      "fontWeightMedium": "500",
      "fontWeightNormal": "400",
      "heightButtonLarge": "52px",
      "heightButtonNormal": "44px",
      "heightButtonSmall": "32px",
      "heightCheckbox": "20px",
      "heightCountryFlag": "20px",
      "heightIconLarge": "32px",
      "heightIconMedium": "24px",
      "heightIconSmall": "16px",
      "heightInputLarge": "52px",
      "heightInputNormal": "44px",
      "heightInputSmall": "32px",
      "heightRadioButton": "20px",
      "lineHeightHeading": "1.2",
      "lineHeightText": "1.4",
      "marginButtonIconLarge": "16px",
      "marginButtonIconNormal": "12px",
      "marginButtonIconSmall": "8px",
      "modifierScaleButtonActive": 0.9,
      "opacityButtonDisabled": "0.3",
      "opacityCheckboxDisabled": "0.5",
      "opacityOverlay": "0.8",
      "opacityRadioButtonDisabled": "0.5",
      "paddingAlert": "16px",
      "paddingAlertWithIcon": "12px",
      "paddingButtonLarge": "28px",
      "paddingButtonLargeWithIcon": "12px",
      "paddingButtonNormal": "16px",
      "paddingButtonNormalWithIcon": "8px",
      "paddingButtonSmall": "12px",
      "paddingButtonSmallWithIcon": "8px",
      "paddingInputNormal": "16px",
      "paddingInputSmall": "12px",
      "paletteBlueDark": "#07405c",
      "paletteBlueLight": "#e0f6ff",
      "paletteBlueLightActive": "#b0e8fe",
      "paletteBlueLightHover": "#c8effe",
      "paletteBlueNormal": "#0176D2",
      "paletteBlueNormalActive": "#0064b2",
      "paletteBlueNormalHover": "#006abd",
      "paletteCloudLight": "#f5f7f9",
      "paletteCloudLightActive": "#d6dee6",
      "paletteCloudLightHover": "#e5eaef",
      "paletteCloudNormal": "#e8edf1",
      "paletteCloudNormalActive": "#cad5df",
      "paletteCloudNormalHover": "#d9e1e8",
      "paletteGreenDark": "#065d12",
      "paletteGreenLight": "#e7f3e8",
      "paletteGreenLightActive": "#c7e3c9",
      "paletteGreenLightHover": "#d7ebd8",
      "paletteGreenNormal": "#46B655",
      "paletteGreenNormalActive": "#3fa34c",
      "paletteGreenNormalHover": "#42ac50",
      "paletteInkDark": "#171b1e",
      "paletteInkLight": "#7f91a8",
      "paletteInkLightActive": "#5f738c",
      "paletteInkLightHover": "#6d819c",
      "paletteInkLighter": "#bac7d5",
      "paletteInkLighterActive": "#94a8be",
      "paletteInkLighterHover": "#a6b6c8",
      "paletteInkNormal": "#46515e",
      "paletteInkNormalActive": "#38404b",
      "paletteInkNormalHover": "#3f4854",
      "paletteOrangeDark": "#a93610",
      "paletteOrangeLight": "#fcf1cd",
      "paletteOrangeLightActive": "#f9e4a1",
      "paletteOrangeLightHover": "#faeab7",
      "paletteOrangeNormal": "#f9971e",
      "paletteOrangeNormalActive": "#e68206",
      "paletteOrangeNormalHover": "#f48a06",
      "paletteProductDark": "#005448",
      "paletteProductLight": "#9ae5da",
      "paletteProductLightActive": "#64d7c6",
      "paletteProductLightHover": "#7fded0",
      "paletteProductNormal": "#00a991",
      "paletteProductNormalActive": "#008f7b",
      "paletteProductNormalHover": "#009882",
      "paletteRedDark": "#650808",
      "paletteRedLight": "#fae8e8",
      "paletteRedLightActive": "#f1c0c0",
      "paletteRedLightHover": "#f5d4d4",
      "paletteRedNormal": "#d21c1c",
      "paletteRedNormalActive": "#b21717",
      "paletteRedNormalHover": "#bd1919",
      "paletteSocialFacebook": "#3b5998",
      "paletteSocialFacebookActive": "#354f88",
      "paletteSocialFacebookHover": "#385490",
      "paletteWhite": "#fff",
      "paletteWhiteActive": "#e5eaef",
      "paletteWhiteHover": "#f5f7f9",
      "spaceLarge": "24px",
      "spaceMedium": "16px",
      "spaceSmall": "12px",
      "spaceXLarge": "32px",
      "spaceXSmall": "8px",
      "spaceXXLarge": "40px",
      "spaceXXSmall": "4px",
      "spaceXXXLarge": "52px",
      "textDecorationTextLinkPrimary": "none",
      "textDecorationTextLinkPrimaryHover": "underline",
      "textDecorationTextLinkSecondary": "underline",
      "textDecorationTextLinkSecondaryHover": "underline",
      "widthCheckbox": "20px",
      "widthCountryFlag": "20px",
      "widthIconLarge": "32px",
      "widthIconMedium": "24px",
      "widthIconSmall": "16px",
      "widthRadioButton": "20px",
      "zIndexDefault": "1",
      "zIndexModal": "825",
      "zIndexModalOverlay": "800",
      "zIndexOnTheTop": "900",
      "zIndexSticky": "100",
    }
  }
  transparent={false}
  type="primary"
  width={0}
>
  <ButtonLink__StyledButtonLink
    component="button"
    external={false}
    href="https://kiwi.com"
    icon={<Airplane />}
    onlyIcon={false}
    size="normal"
    sizeIcon="medium"
    theme={
      Object {
        "backgroundAlertCritical": "#fae8e8",
        "backgroundAlertInfo": "#e0f6ff",
        "backgroundAlertSuccess": "#e7f3e8",
        "backgroundAlertWarning": "#fcf1cd",
        "backgroundBody": "#f5f7f9",
        "backgroundButtonBordered": "transparent",
        "backgroundButtonBorderedActive": "#fff",
        "backgroundButtonBorderedHover": "#f5f7f9",
        "backgroundButtonCritical": "#d21c1c",
        "backgroundButtonCriticalActive": "#b21717",
        "backgroundButtonCriticalHover": "#bd1919",
        "backgroundButtonFacebook": "#3b5998",
        "backgroundButtonFacebookActive": "#354f88",
        "backgroundButtonFacebookHover": "#385490",
        "backgroundButtonGoogle": "#f5f7f9",
        "backgroundButtonGoogleActive": "#d6dee6",
        "backgroundButtonGoogleHover": "#e5eaef",
        "backgroundButtonInfo": "#0176D2",
        "backgroundButtonInfoActive": "#0064b2",
        "backgroundButtonInfoHover": "#006abd",
        "backgroundButtonLinkPrimary": "transparent",
        "backgroundButtonLinkPrimaryActive": "#d6dee6",
        "backgroundButtonLinkPrimaryHover": "#e5eaef",
        "backgroundButtonLinkSecondary": "transparent",
        "backgroundButtonLinkSecondaryActive": "#d6dee6",
        "backgroundButtonLinkSecondaryHover": "#e5eaef",
        "backgroundButtonPrimary": "#00a991",
        "backgroundButtonPrimaryActive": "#008f7b",
        "backgroundButtonPrimaryHover": "#009882",
        "backgroundButtonSecondary": "#e8edf1",
        "backgroundButtonSecondaryActive": "#cad5df",
        "backgroundButtonSecondaryHover": "#d9e1e8",
        "backgroundButtonSuccess": "#46B655",
        "backgroundButtonSuccessActive": "#3fa34c",
        "backgroundButtonSuccessHover": "#42ac50",
        "backgroundButtonWarning": "#f9971e",
        "backgroundButtonWarningActive": "#e68206",
        "backgroundButtonWarningHover": "#f48a06",
        "backgroundCard": "#fff",
        "backgroundCarrierLogo": "transparent",
        "backgroundInput": "#fff",
        "backgroundInputDisabled": "#e8edf1",
        "backgroundModal": "#fff",
        "borderColorButtonCriticalBordered": "#d21c1c",
        "borderColorButtonCriticalBorderedActive": "#b21717",
        "borderColorButtonCriticalBorderedHover": "#bd1919",
        "borderColorButtonFacebookBordered": "#3b5998",
        "borderColorButtonFacebookBorderedActive": "#354f88",
        "borderColorButtonFacebookBorderedHover": "#385490",
        "borderColorButtonGoogleBordered": "#46515e",
        "borderColorButtonGoogleBorderedActive": "#38404b",
        "borderColorButtonGoogleBorderedHover": "#3f4854",
        "borderColorButtonInfoBordered": "#0176D2",
        "borderColorButtonInfoBorderedActive": "#0064b2",
        "borderColorButtonInfoBorderedHover": "#006abd",
        "borderColorButtonPrimaryBordered": "#00a991",
        "borderColorButtonPrimaryBorderedActive": "#008f7b",
        "borderColorButtonPrimaryBorderedHover": "#009882",
        "borderColorButtonSecondaryBordered": "#46515e",
        "borderColorButtonSecondaryBorderedActive": "#38404b",
        "borderColorButtonSecondaryBorderedHover": "#3f4854",
        "borderColorButtonSuccessBordered": "#46B655",
        "borderColorButtonSuccessBorderedActive": "#3fa34c",
        "borderColorButtonSuccessBorderedHover": "#42ac50",
        "borderColorButtonWarningBordered": "#f9971e",
        "borderColorButtonWarningBorderedActive": "#e68206",
        "borderColorButtonWarningBorderedHover": "#f48a06",
        "borderColorCard": "#e8edf1",
        "borderColorInput": "#bac7d5",
        "borderColorInputActive": "#94a8be",
        "borderColorInputError": "#d21c1c",
        "borderColorInputErrorFocus": "#d21c1c",
        "borderColorInputFocus": "#0176D2",
        "borderColorInputHover": "#a6b6c8",
        "borderColorModal": "#e8edf1",
        "borderColorTableCell": "#bac7d5",
        "borderRadiusCircle": "50%",
        "borderRadiusLarge": "6px",
        "borderRadiusNormal": "3px",
        "borderRadiusSmall": "2px",
        "borderStyleCard": "solid",
        "borderStyleInput": "solid",
        "borderWidthCard": "1px",
        "borderWidthInput": "1px",
        "boxShadowInputErrorFocus": "0px 0px 3px 1px rgba(210,28,28,0.3)",
        "boxShadowInputFocus": "0px 0px 3px 1px rgba(1,118,210,0.3)",
        "colorAlertIconCritical": "#d21c1c",
        "colorAlertIconInfo": "#0176D2",
        "colorAlertIconSuccess": "#46B655",
        "colorAlertIconWarning": "#f9971e",
        "colorHeading": "#171b1e",
        "colorHeadingInverted": "#fff",
        "colorIconAttention": "#171b1e",
        "colorIconCheckbox": "#00a991",
        "colorIconCheckboxDisabled": "#bac7d5",
        "colorIconInput": "#bac7d5",
        "colorIconPrimary": "#46515e",
        "colorIconRadioButton": "#00a991",
        "colorIconRadioButtonDisabled": "#bac7d5",
        "colorIconSecondary": "#7f91a8",
        "colorIconTerciary": "#bac7d5",
        "colorLabelForm": "#46515e",
        "colorLabelFormFilled": "#7f91a8",
        "colorPlaceholderInput": "#bac7d5",
        "colorTextAlertCritical": "#650808",
        "colorTextAlertInfo": "#07405c",
        "colorTextAlertSuccess": "#065d12",
        "colorTextAlertWarning": "#a93610",
        "colorTextAttention": "#171b1e",
        "colorTextButtonCritical": "#fff",
        "colorTextButtonCriticalActive": "#fff",
        "colorTextButtonCriticalBordered": "#d21c1c",
        "colorTextButtonCriticalBorderedActive": "#b21717",
        "colorTextButtonCriticalBorderedHover": "#bd1919",
        "colorTextButtonCriticalHover": "#fff",
        "colorTextButtonFacebook": "#fff",
        "colorTextButtonFacebookActive": "#fff",
        "colorTextButtonFacebookBordered": "#3b5998",
        "colorTextButtonFacebookBorderedActive": "#354f88",
        "colorTextButtonFacebookBorderedHover": "#385490",
        "colorTextButtonFacebookHover": "#fff",
        "colorTextButtonFilled": "#fff",
        "colorTextButtonFilledActive": "#fff",
        "colorTextButtonFilledHover": "#fff",
        "colorTextButtonGoogle": "#46515e",
        "colorTextButtonGoogleActive": "#38404b",
        "colorTextButtonGoogleBordered": "#46515e",
        "colorTextButtonGoogleBorderedActive": "#38404b",
        "colorTextButtonGoogleBorderedHover": "#3f4854",
        "colorTextButtonGoogleHover": "#3f4854",
        "colorTextButtonInfo": "#fff",
        "colorTextButtonInfoActive": "#fff",
        "colorTextButtonInfoBordered": "#0176D2",
        "colorTextButtonInfoBorderedActive": "#0064b2",
        "colorTextButtonInfoBorderedHover": "#006abd",
        "colorTextButtonInfoHover": "#fff",
        "colorTextButtonLinkPrimary": "#00a991",
        "colorTextButtonLinkPrimaryActive": "#008f7b",
        "colorTextButtonLinkPrimaryHover": "#009882",
        "colorTextButtonLinkSecondary": "#46515e",
        "colorTextButtonLinkSecondaryActive": "#38404b",
        "colorTextButtonLinkSecondaryHover": "#3f4854",
        "colorTextButtonPrimary": "#fff",
        "colorTextButtonPrimaryActive": "#fff",
        "colorTextButtonPrimaryBordered": "#00a991",
        "colorTextButtonPrimaryBorderedActive": "#008f7b",
        "colorTextButtonPrimaryBorderedHover": "#009882",
        "colorTextButtonPrimaryHover": "#fff",
        "colorTextButtonSecondary": "#46515e",
        "colorTextButtonSecondaryActive": "#38404b",
        "colorTextButtonSecondaryBordered": "#46515e",
        "colorTextButtonSecondaryBorderedActive": "#38404b",
        "colorTextButtonSecondaryBorderedHover": "#3f4854",
        "colorTextButtonSecondaryHover": "#3f4854",
        "colorTextButtonSuccess": "#fff",
        "colorTextButtonSuccessActive": "#fff",
        "colorTextButtonSuccessBordered": "#46B655",
        "colorTextButtonSuccessBorderedActive": "#3fa34c",
        "colorTextButtonSuccessBorderedHover": "#42ac50",
        "colorTextButtonSuccessHover": "#fff",
        "colorTextButtonWarning": "#fff",
        "colorTextButtonWarningActive": "#fff",
        "colorTextButtonWarningBordered": "#f9971e",
        "colorTextButtonWarningBorderedActive": "#e68206",
        "colorTextButtonWarningBorderedHover": "#f48a06",
        "colorTextButtonWarningHover": "#fff",
        "colorTextError": "#d21c1c",
        "colorTextInfo": "#0176D2",
        "colorTextInput": "#46515e",
        "colorTextInputDisabled": "#bac7d5",
        "colorTextLinkPrimary": "#00a991",
        "colorTextLinkPrimaryHover": "#00a991",
        "colorTextLinkSecondary": "#171b1e",
        "colorTextLinkSecondaryHover": "#00a991",
        "colorTextPrimary": "#46515e",
        "colorTextSecondary": "#7f91a8",
        "durationFast": "0.2s",
        "durationNormal": "0.3s",
        "durationSlow": "0.4s",
        "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
        "fontSizeButtonLarge": "16px",
        "fontSizeButtonNormal": "14px",
        "fontSizeButtonSmall": "12px",
        "fontSizeHeadingDisplay": "40px",
        "fontSizeHeadingTitle1": "28px",
        "fontSizeHeadingTitle2": "22px",
        "fontSizeHeadingTitle3": "16px",
        "fontSizeInputNormal": "16px",
        "fontSizeInputSmall": "14px",
        "fontSizeLabelForm": "14px",
        "fontSizeMessage": "14px",
        "fontSizeMessageForm": "12px",
        "fontSizeTextLarge": "16px",
        "fontSizeTextNormal": "14px",
        "fontSizeTextSmall": "12px",
        "fontWeightBold": "700",
        "fontWeightHeadingDisplay": "700",
        "fontWeightHeadingTitle1": "700",
        "fontWeightHeadingTitle2": "500",
        "fontWeightHeadingTitle3": "500",
        "fontWeightLinks": "500",
        "fontWeightMedium": "500",
        "fontWeightNormal": "400",
        "heightButtonLarge": "52px",
        "heightButtonNormal": "44px",
        "heightButtonSmall": "32px",
        "heightCheckbox": "20px",
        "heightCountryFlag": "20px",
        "heightIconLarge": "32px",
        "heightIconMedium": "24px",
        "heightIconSmall": "16px",
        "heightInputLarge": "52px",
        "heightInputNormal": "44px",
        "heightInputSmall": "32px",
        "heightRadioButton": "20px",
        "lineHeightHeading": "1.2",
        "lineHeightText": "1.4",
        "marginButtonIconLarge": "16px",
        "marginButtonIconNormal": "12px",
        "marginButtonIconSmall": "8px",
        "modifierScaleButtonActive": 0.9,
        "opacityButtonDisabled": "0.3",
        "opacityCheckboxDisabled": "0.5",
        "opacityOverlay": "0.8",
        "opacityRadioButtonDisabled": "0.5",
        "paddingAlert": "16px",
        "paddingAlertWithIcon": "12px",
        "paddingButtonLarge": "28px",
        "paddingButtonLargeWithIcon": "12px",
        "paddingButtonNormal": "16px",
        "paddingButtonNormalWithIcon": "8px",
        "paddingButtonSmall": "12px",
        "paddingButtonSmallWithIcon": "8px",
        "paddingInputNormal": "16px",
        "paddingInputSmall": "12px",
        "paletteBlueDark": "#07405c",
        "paletteBlueLight": "#e0f6ff",
        "paletteBlueLightActive": "#b0e8fe",
        "paletteBlueLightHover": "#c8effe",
        "paletteBlueNormal": "#0176D2",
        "paletteBlueNormalActive": "#0064b2",
        "paletteBlueNormalHover": "#006abd",
        "paletteCloudLight": "#f5f7f9",
        "paletteCloudLightActive": "#d6dee6",
        "paletteCloudLightHover": "#e5eaef",
        "paletteCloudNormal": "#e8edf1",
        "paletteCloudNormalActive": "#cad5df",
        "paletteCloudNormalHover": "#d9e1e8",
        "paletteGreenDark": "#065d12",
        "paletteGreenLight": "#e7f3e8",
        "paletteGreenLightActive": "#c7e3c9",
        "paletteGreenLightHover": "#d7ebd8",
        "paletteGreenNormal": "#46B655",
        "paletteGreenNormalActive": "#3fa34c",
        "paletteGreenNormalHover": "#42ac50",
        "paletteInkDark": "#171b1e",
        "paletteInkLight": "#7f91a8",
        "paletteInkLightActive": "#5f738c",
        "paletteInkLightHover": "#6d819c",
        "paletteInkLighter": "#bac7d5",
        "paletteInkLighterActive": "#94a8be",
        "paletteInkLighterHover": "#a6b6c8",
        "paletteInkNormal": "#46515e",
        "paletteInkNormalActive": "#38404b",
        "paletteInkNormalHover": "#3f4854",
        "paletteOrangeDark": "#a93610",
        "paletteOrangeLight": "#fcf1cd",
        "paletteOrangeLightActive": "#f9e4a1",
        "paletteOrangeLightHover": "#faeab7",
        "paletteOrangeNormal": "#f9971e",
        "paletteOrangeNormalActive": "#e68206",
        "paletteOrangeNormalHover": "#f48a06",
        "paletteProductDark": "#005448",
        "paletteProductLight": "#9ae5da",
        "paletteProductLightActive": "#64d7c6",
        "paletteProductLightHover": "#7fded0",
        "paletteProductNormal": "#00a991",
        "paletteProductNormalActive": "#008f7b",
        "paletteProductNormalHover": "#009882",
        "paletteRedDark": "#650808",
        "paletteRedLight": "#fae8e8",
        "paletteRedLightActive": "#f1c0c0",
        "paletteRedLightHover": "#f5d4d4",
        "paletteRedNormal": "#d21c1c",
        "paletteRedNormalActive": "#b21717",
        "paletteRedNormalHover": "#bd1919",
        "paletteSocialFacebook": "#3b5998",
        "paletteSocialFacebookActive": "#354f88",
        "paletteSocialFacebookHover": "#385490",
        "paletteWhite": "#fff",
        "paletteWhiteActive": "#e5eaef",
        "paletteWhiteHover": "#f5f7f9",
        "spaceLarge": "24px",
        "spaceMedium": "16px",
        "spaceSmall": "12px",
        "spaceXLarge": "32px",
        "spaceXSmall": "8px",
        "spaceXXLarge": "40px",
        "spaceXXSmall": "4px",
        "spaceXXXLarge": "52px",
        "textDecorationTextLinkPrimary": "none",
        "textDecorationTextLinkPrimaryHover": "underline",
        "textDecorationTextLinkSecondary": "underline",
        "textDecorationTextLinkSecondaryHover": "underline",
        "widthCheckbox": "20px",
        "widthCountryFlag": "20px",
        "widthIconLarge": "32px",
        "widthIconMedium": "24px",
        "widthIconSmall": "16px",
        "widthRadioButton": "20px",
        "zIndexDefault": "1",
        "zIndexModal": "825",
        "zIndexModalOverlay": "800",
        "zIndexOnTheTop": "900",
        "zIndexSticky": "100",
      }
    }
    tokens={
      Object {
        "backgroundButton": Object {
          "primary": "transparent",
          "secondary": "transparent",
        },
        "backgroundButtonActive": Object {
          "primary": "#e5eaef",
          "secondary": "#e5eaef",
        },
        "backgroundButtonHover": Object {
          "primary": "#e5eaef",
          "secondary": "#e5eaef",
        },
        "colorTextButton": Object {
          "primary": "#00a991",
          "secondary": "#46515e",
        },
        "colorTextButtonActive": Object {
          "primary": "#008f7b",
          "secondary": "#38404b",
        },
        "colorTextButtonHover": Object {
          "primary": "#009882",
          "secondary": "#3f4854",
        },
        "fontSizeButton": Object {
          "large": "16px",
          "normal": "14px",
          "small": "12px",
        },
        "heightButton": Object {
          "large": "52px",
          "normal": "44px",
          "small": "32px",
        },
        "marginRightIcon": Object {
          "large": "16px",
          "normal": "12px",
          "small": "8px",
        },
        "paddingButton": Object {
          "large": "28px",
          "normal": "16px",
          "small": "12px",
        },
        "paddingButtonWithIcon": Object {
          "large": "12px",
          "normal": "8px",
          "small": "8px",
        },
      }
    }
    transparent={false}
    type="primary"
    width={0}
  >
    <Component
      className="ButtonLink__StyledButtonLink-eyUiPe fhXrOw"
      component="button"
      external={false}
      href="https://kiwi.com"
      icon={<Airplane />}
      onlyIcon={false}
      size="normal"
      sizeIcon="medium"
      theme={
        Object {
          "backgroundAlertCritical": "#fae8e8",
          "backgroundAlertInfo": "#e0f6ff",
          "backgroundAlertSuccess": "#e7f3e8",
          "backgroundAlertWarning": "#fcf1cd",
          "backgroundBody": "#f5f7f9",
          "backgroundButtonBordered": "transparent",
          "backgroundButtonBorderedActive": "#fff",
          "backgroundButtonBorderedHover": "#f5f7f9",
          "backgroundButtonCritical": "#d21c1c",
          "backgroundButtonCriticalActive": "#b21717",
          "backgroundButtonCriticalHover": "#bd1919",
          "backgroundButtonFacebook": "#3b5998",
          "backgroundButtonFacebookActive": "#354f88",
          "backgroundButtonFacebookHover": "#385490",
          "backgroundButtonGoogle": "#f5f7f9",
          "backgroundButtonGoogleActive": "#d6dee6",
          "backgroundButtonGoogleHover": "#e5eaef",
          "backgroundButtonInfo": "#0176D2",
          "backgroundButtonInfoActive": "#0064b2",
          "backgroundButtonInfoHover": "#006abd",
          "backgroundButtonLinkPrimary": "transparent",
          "backgroundButtonLinkPrimaryActive": "#d6dee6",
          "backgroundButtonLinkPrimaryHover": "#e5eaef",
          "backgroundButtonLinkSecondary": "transparent",
          "backgroundButtonLinkSecondaryActive": "#d6dee6",
          "backgroundButtonLinkSecondaryHover": "#e5eaef",
          "backgroundButtonPrimary": "#00a991",
          "backgroundButtonPrimaryActive": "#008f7b",
          "backgroundButtonPrimaryHover": "#009882",
          "backgroundButtonSecondary": "#e8edf1",
          "backgroundButtonSecondaryActive": "#cad5df",
          "backgroundButtonSecondaryHover": "#d9e1e8",
          "backgroundButtonSuccess": "#46B655",
          "backgroundButtonSuccessActive": "#3fa34c",
          "backgroundButtonSuccessHover": "#42ac50",
          "backgroundButtonWarning": "#f9971e",
          "backgroundButtonWarningActive": "#e68206",
          "backgroundButtonWarningHover": "#f48a06",
          "backgroundCard": "#fff",
          "backgroundCarrierLogo": "transparent",
          "backgroundInput": "#fff",
          "backgroundInputDisabled": "#e8edf1",
          "backgroundModal": "#fff",
          "borderColorButtonCriticalBordered": "#d21c1c",
          "borderColorButtonCriticalBorderedActive": "#b21717",
          "borderColorButtonCriticalBorderedHover": "#bd1919",
          "borderColorButtonFacebookBordered": "#3b5998",
          "borderColorButtonFacebookBorderedActive": "#354f88",
          "borderColorButtonFacebookBorderedHover": "#385490",
          "borderColorButtonGoogleBordered": "#46515e",
          "borderColorButtonGoogleBorderedActive": "#38404b",
          "borderColorButtonGoogleBorderedHover": "#3f4854",
          "borderColorButtonInfoBordered": "#0176D2",
          "borderColorButtonInfoBorderedActive": "#0064b2",
          "borderColorButtonInfoBorderedHover": "#006abd",
          "borderColorButtonPrimaryBordered": "#00a991",
          "borderColorButtonPrimaryBorderedActive": "#008f7b",
          "borderColorButtonPrimaryBorderedHover": "#009882",
          "borderColorButtonSecondaryBordered": "#46515e",
          "borderColorButtonSecondaryBorderedActive": "#38404b",
          "borderColorButtonSecondaryBorderedHover": "#3f4854",
          "borderColorButtonSuccessBordered": "#46B655",
          "borderColorButtonSuccessBorderedActive": "#3fa34c",
          "borderColorButtonSuccessBorderedHover": "#42ac50",
          "borderColorButtonWarningBordered": "#f9971e",
          "borderColorButtonWarningBorderedActive": "#e68206",
          "borderColorButtonWarningBorderedHover": "#f48a06",
          "borderColorCard": "#e8edf1",
          "borderColorInput": "#bac7d5",
          "borderColorInputActive": "#94a8be",
          "borderColorInputError": "#d21c1c",
          "borderColorInputErrorFocus": "#d21c1c",
          "borderColorInputFocus": "#0176D2",
          "borderColorInputHover": "#a6b6c8",
          "borderColorModal": "#e8edf1",
          "borderColorTableCell": "#bac7d5",
          "borderRadiusCircle": "50%",
          "borderRadiusLarge": "6px",
          "borderRadiusNormal": "3px",
          "borderRadiusSmall": "2px",
          "borderStyleCard": "solid",
          "borderStyleInput": "solid",
          "borderWidthCard": "1px",
          "borderWidthInput": "1px",
          "boxShadowInputErrorFocus": "0px 0px 3px 1px rgba(210,28,28,0.3)",
          "boxShadowInputFocus": "0px 0px 3px 1px rgba(1,118,210,0.3)",
          "colorAlertIconCritical": "#d21c1c",
          "colorAlertIconInfo": "#0176D2",
          "colorAlertIconSuccess": "#46B655",
          "colorAlertIconWarning": "#f9971e",
          "colorHeading": "#171b1e",
          "colorHeadingInverted": "#fff",
          "colorIconAttention": "#171b1e",
          "colorIconCheckbox": "#00a991",
          "colorIconCheckboxDisabled": "#bac7d5",
          "colorIconInput": "#bac7d5",
          "colorIconPrimary": "#46515e",
          "colorIconRadioButton": "#00a991",
          "colorIconRadioButtonDisabled": "#bac7d5",
          "colorIconSecondary": "#7f91a8",
          "colorIconTerciary": "#bac7d5",
          "colorLabelForm": "#46515e",
          "colorLabelFormFilled": "#7f91a8",
          "colorPlaceholderInput": "#bac7d5",
          "colorTextAlertCritical": "#650808",
          "colorTextAlertInfo": "#07405c",
          "colorTextAlertSuccess": "#065d12",
          "colorTextAlertWarning": "#a93610",
          "colorTextAttention": "#171b1e",
          "colorTextButtonCritical": "#fff",
          "colorTextButtonCriticalActive": "#fff",
          "colorTextButtonCriticalBordered": "#d21c1c",
          "colorTextButtonCriticalBorderedActive": "#b21717",
          "colorTextButtonCriticalBorderedHover": "#bd1919",
          "colorTextButtonCriticalHover": "#fff",
          "colorTextButtonFacebook": "#fff",
          "colorTextButtonFacebookActive": "#fff",
          "colorTextButtonFacebookBordered": "#3b5998",
          "colorTextButtonFacebookBorderedActive": "#354f88",
          "colorTextButtonFacebookBorderedHover": "#385490",
          "colorTextButtonFacebookHover": "#fff",
          "colorTextButtonFilled": "#fff",
          "colorTextButtonFilledActive": "#fff",
          "colorTextButtonFilledHover": "#fff",
          "colorTextButtonGoogle": "#46515e",
          "colorTextButtonGoogleActive": "#38404b",
          "colorTextButtonGoogleBordered": "#46515e",
          "colorTextButtonGoogleBorderedActive": "#38404b",
          "colorTextButtonGoogleBorderedHover": "#3f4854",
          "colorTextButtonGoogleHover": "#3f4854",
          "colorTextButtonInfo": "#fff",
          "colorTextButtonInfoActive": "#fff",
          "colorTextButtonInfoBordered": "#0176D2",
          "colorTextButtonInfoBorderedActive": "#0064b2",
          "colorTextButtonInfoBorderedHover": "#006abd",
          "colorTextButtonInfoHover": "#fff",
          "colorTextButtonLinkPrimary": "#00a991",
          "colorTextButtonLinkPrimaryActive": "#008f7b",
          "colorTextButtonLinkPrimaryHover": "#009882",
          "colorTextButtonLinkSecondary": "#46515e",
          "colorTextButtonLinkSecondaryActive": "#38404b",
          "colorTextButtonLinkSecondaryHover": "#3f4854",
          "colorTextButtonPrimary": "#fff",
          "colorTextButtonPrimaryActive": "#fff",
          "colorTextButtonPrimaryBordered": "#00a991",
          "colorTextButtonPrimaryBorderedActive": "#008f7b",
          "colorTextButtonPrimaryBorderedHover": "#009882",
          "colorTextButtonPrimaryHover": "#fff",
          "colorTextButtonSecondary": "#46515e",
          "colorTextButtonSecondaryActive": "#38404b",
          "colorTextButtonSecondaryBordered": "#46515e",
          "colorTextButtonSecondaryBorderedActive": "#38404b",
          "colorTextButtonSecondaryBorderedHover": "#3f4854",
          "colorTextButtonSecondaryHover": "#3f4854",
          "colorTextButtonSuccess": "#fff",
          "colorTextButtonSuccessActive": "#fff",
          "colorTextButtonSuccessBordered": "#46B655",
          "colorTextButtonSuccessBorderedActive": "#3fa34c",
          "colorTextButtonSuccessBorderedHover": "#42ac50",
          "colorTextButtonSuccessHover": "#fff",
          "colorTextButtonWarning": "#fff",
          "colorTextButtonWarningActive": "#fff",
          "colorTextButtonWarningBordered": "#f9971e",
          "colorTextButtonWarningBorderedActive": "#e68206",
          "colorTextButtonWarningBorderedHover": "#f48a06",
          "colorTextButtonWarningHover": "#fff",
          "colorTextError": "#d21c1c",
          "colorTextInfo": "#0176D2",
          "colorTextInput": "#46515e",
          "colorTextInputDisabled": "#bac7d5",
          "colorTextLinkPrimary": "#00a991",
          "colorTextLinkPrimaryHover": "#00a991",
          "colorTextLinkSecondary": "#171b1e",
          "colorTextLinkSecondaryHover": "#00a991",
          "colorTextPrimary": "#46515e",
          "colorTextSecondary": "#7f91a8",
          "durationFast": "0.2s",
          "durationNormal": "0.3s",
          "durationSlow": "0.4s",
          "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
          "fontSizeButtonLarge": "16px",
          "fontSizeButtonNormal": "14px",
          "fontSizeButtonSmall": "12px",
          "fontSizeHeadingDisplay": "40px",
          "fontSizeHeadingTitle1": "28px",
          "fontSizeHeadingTitle2": "22px",
          "fontSizeHeadingTitle3": "16px",
          "fontSizeInputNormal": "16px",
          "fontSizeInputSmall": "14px",
          "fontSizeLabelForm": "14px",
          "fontSizeMessage": "14px",
          "fontSizeMessageForm": "12px",
          "fontSizeTextLarge": "16px",
          "fontSizeTextNormal": "14px",
          "fontSizeTextSmall": "12px",
          "fontWeightBold": "700",
          "fontWeightHeadingDisplay": "700",
          "fontWeightHeadingTitle1": "700",
          "fontWeightHeadingTitle2": "500",
          "fontWeightHeadingTitle3": "500",
          "fontWeightLinks": "500",
          "fontWeightMedium": "500",
          "fontWeightNormal": "400",
          "heightButtonLarge": "52px",
          "heightButtonNormal": "44px",
          "heightButtonSmall": "32px",
          "heightCheckbox": "20px",
          "heightCountryFlag": "20px",
          "heightIconLarge": "32px",
          "heightIconMedium": "24px",
          "heightIconSmall": "16px",
          "heightInputLarge": "52px",
          "heightInputNormal": "44px",
          "heightInputSmall": "32px",
          "heightRadioButton": "20px",
          "lineHeightHeading": "1.2",
          "lineHeightText": "1.4",
          "marginButtonIconLarge": "16px",
          "marginButtonIconNormal": "12px",
          "marginButtonIconSmall": "8px",
          "modifierScaleButtonActive": 0.9,
          "opacityButtonDisabled": "0.3",
          "opacityCheckboxDisabled": "0.5",
          "opacityOverlay": "0.8",
          "opacityRadioButtonDisabled": "0.5",
          "paddingAlert": "16px",
          "paddingAlertWithIcon": "12px",
          "paddingButtonLarge": "28px",
          "paddingButtonLargeWithIcon": "12px",
          "paddingButtonNormal": "16px",
          "paddingButtonNormalWithIcon": "8px",
          "paddingButtonSmall": "12px",
          "paddingButtonSmallWithIcon": "8px",
          "paddingInputNormal": "16px",
          "paddingInputSmall": "12px",
          "paletteBlueDark": "#07405c",
          "paletteBlueLight": "#e0f6ff",
          "paletteBlueLightActive": "#b0e8fe",
          "paletteBlueLightHover": "#c8effe",
          "paletteBlueNormal": "#0176D2",
          "paletteBlueNormalActive": "#0064b2",
          "paletteBlueNormalHover": "#006abd",
          "paletteCloudLight": "#f5f7f9",
          "paletteCloudLightActive": "#d6dee6",
          "paletteCloudLightHover": "#e5eaef",
          "paletteCloudNormal": "#e8edf1",
          "paletteCloudNormalActive": "#cad5df",
          "paletteCloudNormalHover": "#d9e1e8",
          "paletteGreenDark": "#065d12",
          "paletteGreenLight": "#e7f3e8",
          "paletteGreenLightActive": "#c7e3c9",
          "paletteGreenLightHover": "#d7ebd8",
          "paletteGreenNormal": "#46B655",
          "paletteGreenNormalActive": "#3fa34c",
          "paletteGreenNormalHover": "#42ac50",
          "paletteInkDark": "#171b1e",
          "paletteInkLight": "#7f91a8",
          "paletteInkLightActive": "#5f738c",
          "paletteInkLightHover": "#6d819c",
          "paletteInkLighter": "#bac7d5",
          "paletteInkLighterActive": "#94a8be",
          "paletteInkLighterHover": "#a6b6c8",
          "paletteInkNormal": "#46515e",
          "paletteInkNormalActive": "#38404b",
          "paletteInkNormalHover": "#3f4854",
          "paletteOrangeDark": "#a93610",
          "paletteOrangeLight": "#fcf1cd",
          "paletteOrangeLightActive": "#f9e4a1",
          "paletteOrangeLightHover": "#faeab7",
          "paletteOrangeNormal": "#f9971e",
          "paletteOrangeNormalActive": "#e68206",
          "paletteOrangeNormalHover": "#f48a06",
          "paletteProductDark": "#005448",
          "paletteProductLight": "#9ae5da",
          "paletteProductLightActive": "#64d7c6",
          "paletteProductLightHover": "#7fded0",
          "paletteProductNormal": "#00a991",
          "paletteProductNormalActive": "#008f7b",
          "paletteProductNormalHover": "#009882",
          "paletteRedDark": "#650808",
          "paletteRedLight": "#fae8e8",
          "paletteRedLightActive": "#f1c0c0",
          "paletteRedLightHover": "#f5d4d4",
          "paletteRedNormal": "#d21c1c",
          "paletteRedNormalActive": "#b21717",
          "paletteRedNormalHover": "#bd1919",
          "paletteSocialFacebook": "#3b5998",
          "paletteSocialFacebookActive": "#354f88",
          "paletteSocialFacebookHover": "#385490",
          "paletteWhite": "#fff",
          "paletteWhiteActive": "#e5eaef",
          "paletteWhiteHover": "#f5f7f9",
          "spaceLarge": "24px",
          "spaceMedium": "16px",
          "spaceSmall": "12px",
          "spaceXLarge": "32px",
          "spaceXSmall": "8px",
          "spaceXXLarge": "40px",
          "spaceXXSmall": "4px",
          "spaceXXXLarge": "52px",
          "textDecorationTextLinkPrimary": "none",
          "textDecorationTextLinkPrimaryHover": "underline",
          "textDecorationTextLinkSecondary": "underline",
          "textDecorationTextLinkSecondaryHover": "underline",
          "widthCheckbox": "20px",
          "widthCountryFlag": "20px",
          "widthIconLarge": "32px",
          "widthIconMedium": "24px",
          "widthIconSmall": "16px",
          "widthRadioButton": "20px",
          "zIndexDefault": "1",
          "zIndexModal": "825",
          "zIndexModalOverlay": "800",
          "zIndexOnTheTop": "900",
          "zIndexSticky": "100",
        }
      }
      tokens={
        Object {
          "backgroundButton": Object {
            "primary": "transparent",
            "secondary": "transparent",
          },
          "backgroundButtonActive": Object {
            "primary": "#e5eaef",
            "secondary": "#e5eaef",
          },
          "backgroundButtonHover": Object {
            "primary": "#e5eaef",
            "secondary": "#e5eaef",
          },
          "colorTextButton": Object {
            "primary": "#00a991",
            "secondary": "#46515e",
          },
          "colorTextButtonActive": Object {
            "primary": "#008f7b",
            "secondary": "#38404b",
          },
          "colorTextButtonHover": Object {
            "primary": "#009882",
            "secondary": "#3f4854",
          },
          "fontSizeButton": Object {
            "large": "16px",
            "normal": "14px",
            "small": "12px",
          },
          "heightButton": Object {
            "large": "52px",
            "normal": "44px",
            "small": "32px",
          },
          "marginRightIcon": Object {
            "large": "16px",
            "normal": "12px",
            "small": "8px",
          },
          "paddingButton": Object {
            "large": "28px",
            "normal": "16px",
            "small": "12px",
          },
          "paddingButtonWithIcon": Object {
            "large": "12px",
            "normal": "8px",
            "small": "8px",
          },
        }
      }
      transparent={false}
      type="primary"
      width={0}
    >
      <a
        className="ButtonLink__StyledButtonLink-eyUiPe fhXrOw"
        href="https://kiwi.com"
        size="normal"
      >
        <ButtonLink__IconContainer
          onlyIcon={false}
          size="normal"
          sizeIcon="medium"
          tokens={
            Object {
              "backgroundButton": Object {
                "primary": "transparent",
                "secondary": "transparent",
              },
              "backgroundButtonActive": Object {
                "primary": "#e5eaef",
                "secondary": "#e5eaef",
              },
              "backgroundButtonHover": Object {
                "primary": "#e5eaef",
                "secondary": "#e5eaef",
              },
              "colorTextButton": Object {
                "primary": "#00a991",
                "secondary": "#46515e",
              },
              "colorTextButtonActive": Object {
                "primary": "#008f7b",
                "secondary": "#38404b",
              },
              "colorTextButtonHover": Object {
                "primary": "#009882",
                "secondary": "#3f4854",
              },
              "fontSizeButton": Object {
                "large": "16px",
                "normal": "14px",
                "small": "12px",
              },
              "heightButton": Object {
                "large": "52px",
                "normal": "44px",
                "small": "32px",
              },
              "marginRightIcon": Object {
                "large": "16px",
                "normal": "12px",
                "small": "8px",
              },
              "paddingButton": Object {
                "large": "28px",
                "normal": "16px",
                "small": "12px",
              },
              "paddingButtonWithIcon": Object {
                "large": "12px",
                "normal": "8px",
                "small": "8px",
              },
            }
          }
          type="primary"
        >
          <Component
            className="ButtonLink__IconContainer-flENJD jrcjib"
            onlyIcon={false}
            size="normal"
            sizeIcon="medium"
            tokens={
              Object {
                "backgroundButton": Object {
                  "primary": "transparent",
                  "secondary": "transparent",
                },
                "backgroundButtonActive": Object {
                  "primary": "#e5eaef",
                  "secondary": "#e5eaef",
                },
                "backgroundButtonHover": Object {
                  "primary": "#e5eaef",
                  "secondary": "#e5eaef",
                },
                "colorTextButton": Object {
                  "primary": "#00a991",
                  "secondary": "#46515e",
                },
                "colorTextButtonActive": Object {
                  "primary": "#008f7b",
                  "secondary": "#38404b",
                },
                "colorTextButtonHover": Object {
                  "primary": "#009882",
                  "secondary": "#3f4854",
                },
                "fontSizeButton": Object {
                  "large": "16px",
                  "normal": "14px",
                  "small": "12px",
                },
                "heightButton": Object {
                  "large": "52px",
                  "normal": "44px",
                  "small": "32px",
                },
                "marginRightIcon": Object {
                  "large": "16px",
                  "normal": "12px",
                  "small": "8px",
                },
                "paddingButton": Object {
                  "large": "28px",
                  "normal": "16px",
                  "small": "12px",
                },
                "paddingButtonWithIcon": Object {
                  "large": "12px",
                  "normal": "8px",
                  "small": "8px",
                },
              }
            }
            type="primary"
          >
            <div
              className="ButtonLink__IconContainer-flENJD jrcjib"
              size="normal"
            >
              <Airplane>
                <OrbitIcon
                  size="medium"
                  viewBox="0 0 24 24"
                >
                  <IconBase
                    size="24px"
                    viewBox="0 0 24 24"
                  >
                    <svg
                      fill="currentColor"
                      height="24px"
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "color": undefined,
                          "verticalAlign": "middle",
                        }
                      }
                      viewBox="0 0 24 24"
                      width="24px"
                    >
                      <path
                        d="M21 16v-2l-8-5V3.5c0-.83-.67-1.5-1.5-1.5S10 2.67 10 3.5V9l-8 5v2l8-2.5V19l-2 1.5V22l3.5-1 3.5 1v-1.5L13 19v-5.5l8 2.5z"
                      />
                    </svg>
                  </IconBase>
                </OrbitIcon>
              </Airplane>
            </div>
          </Component>
        </ButtonLink__IconContainer>
        ButtonLink
      </a>
    </Component>
  </ButtonLink__StyledButtonLink>
</ButtonLink>
`;
